--- a/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
+++ b/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
@@ -74,3 +74,6 @@ console.log('실행');
 
 ### 결론
 * process.nextTick 함수를 이용하면 비동기적 코드를 작성할 수 있다.
+
+### 더 좋은 자료
+* [비동기적 javascript](https://hudi.kr/%EB%B9%84%EB%8F%99%EA%B8%B0%EC%A0%81-javascript-%EC%8B%B1%EA%B8%80%EC%8A%A4%EB%A0%88%EB%93%9C-%EA%B8%B0%EB%B0%98-js%EC%9D%98-%EB%B9%84%EB%8F%99%EA%B8%B0-%EC%B2%98%EB%A6%AC-%EB%B0%A9%EB%B2%95/)
