--- a/_posts/2018-7-22-amathon.md
+++ b/_posts/2018-7-22-amathon.md
@@ -13,7 +13,7 @@ comments: true
 AWSKRUG 그룹에서 기획한  Amateur hackathon 이다. ![amathon 정의](/public/img/amathon/amathon.JPG) 특이한 점은 1,2,3 등에 대한 수상이 없다는 점. 대학생과 주니어 개발자들만을 대상으로 우리들의 열정에 순위를 매기지 않았다고 한다 :D (멋지다) 
 
 **간단한 일정**
-![session1](/public/img/amathon/session1.JPG) ![session2](/public/img/amathon/session2.JPG) 
+![session1](/public/img/amathon/session1.JPG) ![session2](/public/img/amathon/session2.jpg) 
 
 ## 느끼고 배운점과 이런저런 두서 없는 내 생각
 이제 곧 졸업을 앞두고 있지만 부끄럽게도 내 생에 첫 해커톤 참가였다. 중국에서의 인턴생활과는 또 다른 신선한 자극이 되었던 것 같다.
@@ -25,4 +25,4 @@ AWSKRUG 그룹에서 기획한  Amateur hackathon 이다. ![amathon 정의](/pub
 * 실력은 부족하지만 개발은 너무 재미있다. 무박 2일 동안 하는 것이 코딩이 아니었다면 내내 즐겁게 할 수 있었을까 하는 생각이 들었고, 나에게 개발자란 놀면서 돈벌수 너무 좋은 직군이라는 생각이 들었다.
 * 디자인을 구현해 낼 css 공부도 충분히 해야한다. 디자이너들의 디자인을 충분히 구현해 내고 싶다ㅠㅠ 
 * 서울과는 끝과 끝인 지방에 살다보니 여러 커뮤니티에서 주로 올라오는 행사들, 예를 들어 서울에서 열리는 해커톤 홍보글이나 각종 IT 컨퍼런스, 세션들에 관심은 많았지만 선뜻 참가하지 못하는 점이 많이 아쉬웠는데 돈과 시간, 체력이 상당히 많이 소모되지만 진작 많이 참여할 걸.. 이라는 생각이 들었다. 
-
+* 굿즈는 너무 이쁘다:D
