--- a/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
+++ b/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
@@ -14,9 +14,12 @@ comments: true
 // 코드1
 // 비동기 함수 호출
 // db에서 option에 해당하는 유저를 찾는 함수라고 생각하자
+{% highlight javascript %}
 asyncFunc(option,(err,result) => {
   //blablabla
 });
+{% endhighlight %}
+
 ```
 
 많이 봐서 익숙하다! node.js는 비동기로 처리한다고 배웠으니 위의 함수가 실행되는 동안 그 가만히 기다리지 않고 다른 연산을 수행하다가 결과가 도착하면 err나 result를 다루면 되겠구나! ~~훌륭하다!~~
