update code highlight

--- a/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
+++ b/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
@@ -10,23 +10,21 @@ comments: true
 
 ### 비동기 프로그래밍
 말은 많이 들어봤다. 무엇을 뜻하는지도 알고 있다. 시간이 많이 걸리는 file I/O나 network I/O 처리 요청을 운영체제에 전달하고 CPU는 다른 연산을 계속 진행하는 것. 따라서 CPU 사용 효율성이 늘어나고, 요청했던 I/O처리의 값이 돌아오면 콜백으로 값을 받아 처리하는 것이다. 자바스크립트나 Node.js로 코딩을 조금이라도 해본 사람들이라면 이런 작업들이 코드상에서 callback 함수로써 등장하게 된다는 것을 알고 있을 것이다. 많은 I/O 처리 라이브러리들의 사용법을 보면(특히 자주 쓰는 데이터베이스 라이브러리를 생각해보자), 보통 아래와 같은 식이기 때문이다.
-```
+{% highlight javascript %}
 // 코드1
 // 비동기 함수 호출
 // db에서 option에 해당하는 유저를 찾는 함수라고 생각하자
-{% highlight javascript %}
 asyncFunc(option,(err,result) => {
   //blablabla
 });
 {% endhighlight %}
 
-```
 
 많이 봐서 익숙하다! node.js는 비동기로 처리한다고 배웠으니 위의 함수가 실행되는 동안 그 가만히 기다리지 않고 다른 연산을 수행하다가 결과가 도착하면 err나 result를 다루면 되겠구나! ~~훌륭하다!~~
 아니. 과연 이걸 훌륭하다고 말할 수 있을까? 이 정도 이해 상태라면 그저 비동기 == 콜백이 된다. 그냥 라이브러리를 가져다 쓰는데에 무리는 없겠지만 우리가 **비동기 함수를 직접 만들 때** 다 들통난다.
 
 아래의 콘솔 출력 순서를 맞춰보자.
-```
+{% highlight javascript %}
 // 코드2
 const func = (msg, cb) => {
   console.log(msg);
@@ -43,7 +41,7 @@ func('hello world', (err, result) => {
 //다른 작업
 console.log('실행');
 
-```
+{% endhighlight %}
 
 func 함수를 호출하는 방법은 코드1과 비슷하다. 함수의 첫번째 인자로 option(기타 등등)을 주고, 콜백함수의 인자로 err나 결과를 기다린다. 실행 순서는 어떻게 될까? 이 함수는 우리가 흔히 라이브러리를 쓸때 보았던 형식과 비슷하게 콜백을 사용하므로 비동기적으로 동작할까?
 
