--- a/_posts/2018-07-30-디스트럭처링.md
+++ b/_posts/2018-07-30-디스트럭처링.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: object destructuring(디스트럭처링)
+title: destructuring(디스트럭처링)
 category: javacript
 tags: [javacript, operation, basic, es6]
 comments: true
@@ -40,7 +40,7 @@ const { name, nationality="korea" } = { name:"yongjun" };
 console.log(name, nationality); // yongjun korea
 
 // 새로운 변수명으로 할당 받기
-const { newName, newNationality } = { name: "yongjun", nationality: "korea" };
+const { name: newName, nationality: newNationality } = { name: "yongjun", nationality: "korea" };
 console.log(newName, newNationality); // youngjun korea
 {% endhighlight %}
 
@@ -55,4 +55,21 @@ const showProfile = ({ name, nationality="none"}) => {
 showProfile({name="elecoder" nationality="korea"}); // elecoder korea
 showProfile({name="elecoder"}); // elecoder none
 
+{% endhighlight %}
+
+배열에서도 디스트럭처링이 가능하다.
+{% highlight javascript %}
+let numbers = ["one", "two", "three", "four", "five"];
+
+let [num1, num2] = numbers;
+console.log(num1, num2); // one two
+
+// 세번째 네번째 요소를 받고 싶다면 아래와 같이 하자
+let [,,num3, num4] = numbers;
+console.log(num3,num4); // three four
+
+// spread 연산자와 함께하면 이런것도 가능하다
+let [val1, ...vals] = numbers;
+console.log(val1); // one
+console.log(vals); // two three four five
 {% endhighlight %}
