--- a/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
+++ b/_posts/2018-07-02-비동기 프로그밍(feat.싱글스레드).md
@@ -20,7 +20,7 @@ asyncFunc(option,(err,result) => {
 {% endhighlight %}
 
 
-많이 봐서 익숙하다! node.js는 비동기로 처리한다고 배웠으니 위의 함수가 실행되는 동안 그 가만히 기다리지 않고 다른 연산을 수행하다가 결과가 도착하면 err나 result를 다루면 되겠구나! ~~훌륭하다!~~
+많이 봐서 익숙하다! node.js는 비동기로 처리한다고 배웠으니 위의 함수가 실행되는 동안 그 가만히 기다리지 않고 다른 연산을 수행하다가 결과가 도착하면 err나 result를 다루면 되겠구나?!
 아니. 과연 이걸 훌륭하다고 말할 수 있을까? 이 정도 이해 상태라면 그저 비동기 == 콜백이 된다. 그냥 라이브러리를 가져다 쓰는데에 무리는 없겠지만 우리가 **비동기 함수를 직접 만들 때** 다 들통난다.
 
 아래의 콘솔 출력 순서를 맞춰보자.
