--- a/_posts/2018-08-22-sequelize 1대1.md
+++ b/_posts/2018-08-22-sequelize 1대1.md
@@ -67,11 +67,16 @@ const Company  = this.sequelize.define('company', {/* attributes */});
 User.belongsTo(Company, {foreignKey: 'fk_companyname', targetKey: 'name'}); // Adds fk_companyname to User
 ```
 
+추가적으로 중요한 점은, User는 create 함수와 getter, setter를 얻는 다는 것이다. 공식문서에는 이렇게 나와있다
+```
+In the API reference below, add the name of the association to the method, e.g. for User.belongsTo(Project) the getter will be user.getProject().
+```
 
+아래 hasOne에도 나오겠지만, 둘다 getter와 setter를 가진다.
 
 #### HasOne
 
-hasOne은, foreign key가 target Model에 생긴다. 그리고 또 하나의 차이점이 있다. 공식 문서처럼 User와 Project로 설명하자면,
+hasOne은, foreign key가 target Model에 생긴다. 공식 문서처럼 User와 Project로 설명하자면,
 
 ```javascript
 // One-way associations
@@ -111,6 +116,10 @@ Person.getFather
 
 foreign key는 DadId로 생기지만, orm으로 사용할 때는 as  : 'Father'를 사용했으므로, Person.getFather으로 호출할 수 있다.
 
+
+
+## (추가) 생성된 foreign Key에 데이터 넣기
+예를 들어, Book과 Category 테이블이 존재하고, Book 모델에 Category를 참조할 foreign key를 가지고 싶다고 하자. 그렇다면, 위에서 보았듯이 Book.belongsTo(Category)를 하자. Book 모델에 외래키로써 CategoryId가 생긴다. 따라서 Book모델은 Book.setCategory(카테고리 인스턴스)로 외부 모듈을 참조 할 수가 있게 된다. 굳이 Book 모델을 정의할 때 CategoryId를 선언할 필요도 없고, Book.create()에서 인수로 Category인스턴스의 id를 구해서 넘겨줄 필요가 없다는 것이다.
 
 
 ### 공식문서 링크
