--- a/_posts/2018-08-22-sequelize 1대1.md
+++ b/_posts/2018-08-22-sequelize 1대1.md
@@ -11,7 +11,7 @@ comments: true
 
 sequelize로 데이터베이스를 설계하다가, belongsTo와 hasOne의 관계가 헷갈렸다. Book과 Category 테이블이 있는데, Book은 무조건 Category를 하나 가져야만 했다. 따라서 Category는 Book에 속해있는 것이다. 그러나 따지고 보면 Book도 카테고리에 속해있다는 생각이 들었다. 그럼 결국 Book belongsTo Category인가? Book hasOne Category인가? 동시에 Category belongsTo Book을 해줘야 하나??? 
 
-## 공식 문서 파헤치지
+## 공식 문서 파헤치기
 
 한번 확실히 하고 가는게 좋을 것 같아서 공식 문서를 정독했다. 따라서 이 글은 거의 공식 문서를 번역한 내용이 될 것 같다.
 
