--- a/_posts/2018-09-10-파이썬 알고리즘 팁.md
+++ b/_posts/2018-09-10-파이썬 알고리즘 팁.md
@@ -32,7 +32,7 @@ s가 'wordo'라는 문자열 이라고 했을 때 list(s) 의 결과 값은
 
 ## combinations
 백준 [2309번 (일곱 난쟁이)](https://www.acmicpc.net/problem/2309)는 9명의 난쟁이 후보중에서 2명의 가짜 난쟁이를 구분해 실제 7명의 난쟁이를 찾아내는 문제다. 일반적으로 2중 for문을 순회하면서 모든 경우의 수를 확인해 보는 문제인데, python이 가진 combinations 함수를 사용하면 굳이 일일히 2중 for문을 쓸 필요가 없이 간단하게 해결이 가능했다. 간단한 사용법은 아래와 같다.
-```python
+```python3
 from itertools import combinations
 
 candidate = [1,2,3,4,5,6,7,8,9]
@@ -42,4 +42,4 @@ for i in combi:
     # bla bla
 ```
 
-brute force문제를 풀 떄 유용하게 사용할 수 있을 것 같다.
+brute force문제를 풀 때 유용하게 사용할 수 있을 것 같다.
