선택정렬 수정

--- a/_posts/2018-10-11-선택정렬.md
+++ b/_posts/2018-10-11-선택정렬.md
@@ -7,7 +7,7 @@ comments: true
 ---
 
 ## 선택 정렬이란?
-선택 정렬은 배열의 배열의 길이만큼 루프를 돌며, 루프를 돌 때 마다 가장 작은 값을 **"선택!"** 해서 맨 왼쪽으로 옮겨가며 정렬한다. 첫 번째 루프를 제외한 그 이상의 루프에서는, 맨 왼쪽으로 옮길 때 마다 이미 최소값이 배치된 인덱스의 값을 무시해야만 한다.
+선택 정렬은 배열의 길이만큼 루프를 돌며, 루프를 돌 때 마다 가장 작은 값을 **"선택!"** 해서 맨 왼쪽으로 옮겨가며 정렬한다. 따라서 한 번 루프를 돌때 마다 매번 최소값이 왼쪽에 정렬 된다(물론 내림차순 정렬이라면 최대값을 왼쪽으로 보내면 된다). 코드를 보면 이해가 쉽다. 
 
 ## 과정
 ![raw array](/public/img/sorting/selection/selection1.PNG)
