javascript 오타 수정

--- a/_posts/2018-08-08-console.log(0.1 + 0.2 == 0.3);의 결과.md
+++ b/_posts/2018-08-08-console.log(0.1 + 0.2 == 0.3);의 결과.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: console.log(0.1 + 0.2 == 0.3); 의 결과는?
-category: javacript
-tags: [basic, number]
+category: javascript
+tags: [javascript, basic, number]
 comments: true 
 --- 
 
