--- a/_posts/2018-09-24-currying.md
+++ b/_posts/2018-09-24-currying.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Currying
-category: javacript
-tags: [javacript, currying, 함수형 프로그래밍]
+category: javascript
+tags: [javascript, currying, 함수형 프로그래밍]
 comments: true
 ---
 
