--- a/_posts/2018-07-30-디스트럭처링.md
+++ b/_posts/2018-07-30-디스트럭처링.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: destructuring(디스트럭처링)
-category: javacript
-tags: [javacript, operation, basic, es6]
+category: javascript
+tags: [javascript, operation, basic, es6]
 comments: true 
 --- 
 
