오타 및 가독성 개선

--- a/_posts/2018-08-08-console.log(0.1 + 0.2 == 0.3);의 결과.md
+++ b/_posts/2018-08-08-console.log(0.1 + 0.2 == 0.3);의 결과.md
@@ -6,20 +6,20 @@ tags: [javascript, basic, number]
 comments: true 
 --- 
 
-[Front-end-Developer-Interview-Questions](https://github.com/h5bp/Front-end-Developer-Interview-Questions/tree/master/Translations/Korean)에 나온 문제이다. 처음엔 == 와 === 를 비교하는 문제인가 싶었는데 아니었다.. 그래서 한번 알아보았다.
+[Front-end-Developer-Interview-Questions](https://github.com/h5bp/Front-end-Developer-Interview-Questions/tree/master/Translations/Korean)에서 본 질문이다. 처음엔 == 와 === 를 비교하는 문제인가 싶었는데 아니었다.
 
 ## 숫자
-위 문제는 아주 살짝의 컴퓨터 내부 원리에 대한 이해가 필요했다. 젼혀 거대한 것은 아니고 진법 변환에 대한 내용인데, 컴퓨터는 우리가 주로 사용하는 10진수를 내부적으로 2진수로 변환시켜 계산을 한다. 컴퓨터는 0과 1로 모든 것을 처리하니까. 예를 들어 10진수 3은 2진수 11, 10진수 4는 2진수 100. 이렇게 변환되는 것이다. 
+이 문제는 컴퓨터 내부 원리에 대해 아주 살짝의 이해가 필요했다. 젼혀 겁먹을 것은 아니고 진법 변환에 대한 내용이다. 컴퓨터는 우리가 주로 사용하는 10진수를 내부적으로 2진수로 변환시켜 계산을 한다. 컴퓨터는 0과 1로 모든 것을 처리하기 때문이다. 예를 들어 10진수 3은 2진수 11, 10진수 4는 2진수 100. 이렇게 변환되는 것이다. 
 
-소수점을 처리할 경우에도 마찬가지인데, 몇몇 소수는 특이하게 무한하게 긴 2진수가 된다고 한다. 당연히 컴퓨터 메모리는 용량이 정해져 있기 때문에 무한한 2진수는 적절하게 자를 수 밖에 없고, 이렇게 자르게 됨으로써 아주 미세한 숫자 차이(오차)가 생기게 되는 것이다. 
+소수점을 처리할 경우에도 마찬가지인데, 몇몇 소수는 특이하게도 무한하게 긴 2진수가 된다고 한다. 당연히 컴퓨터 메모리는 용량이 정해져 있기 때문에 무한한 2진수는 적절하게 자를 수 밖에 없고, 이렇게 자르게 됨으로써 아주 미세한 숫자 차이(오차)가 생기게 된다. 
 
 {% highlight javascript %}
 console.log(0.1 + 0.3) // 0.4
 console.log(0.1 + 0.2) // 0.30000000000000004
 {% endhighlight %}
 
-코드에서 보듯이 0.1 + 0.3은 우리가 기대한 것처럼 0.4 가나온다. 이는 0.1 과 0.3 모두 2진수로 변환했을 때 무한한 숫자가 아니기 떄문에 그런 것이다.
-반면 0.1 + 0.2는 아주아주 미세한 차이로 우리가 기대한 0.3과 다른 값을 출력한다. 이 것은 0.2가 2진수로 변환되었을 때 무한한 숫자가 되어 내부적으로 유한한 숫자로 바꾸기 위해 끝부분을 자름으로서 오차가 발생했기 때문이다.
+코드에서 보듯이 0.1 + 0.3은 우리가 기대한 것처럼 0.4 가나온다. 이는 0.1 과 0.3 모두 2진수로 변환했을 때 무한한 숫자가 아니기 때문에 그런 것이다.
+반면 0.1 + 0.2는 아주 아주 미세한 차이로 우리가 기대한 0.3과 다른 값을 출력한다. 이 것은 0.2가 2진수로 변환되었을 때 무한한 숫자가 되어 내부적으로 유한한 숫자로 바꾸기 위해 끝 부분을 자름으로써 오차가 발생했기 때문이다.
 
 ## True가 되게 하는 방법
 [toFixed()](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Number/toFixed) 라는 함수가 있다.
@@ -42,9 +42,7 @@ console.log(0.1 + 0.2) // 0.30000000000000004
 1.232.toFixed(2) // "1.23"
 {% endhighlight %}
 
-이 코드는 정상 출력된다. toFixed() 함수가 소숫점에서만 가능해서 그런게 아니라 js가 사람이 아니라 컴퓨터라 그런 것....(?)
-
-js는 숫자 부분에서 . 이 나오면 당연히 소숫점이라 생각해서 . 뒤에 소수가 올 것이라 생각한다. 그런데 1.toFixed(2); 같은 경우에는 .뒤에 숫자가 아니라 함수가 와버려서 js가 에러를 뿜어준 것이다. 반면 
+이 코드는 정상 출력된다. toFixed() 함수가 float형태의 숫자에서만 가능해서 그런게 아니다. js가 멍청해서 그런 것이다....(?) js는 숫자 부분에서 . 이 나오면 당연히 소숫점이라 생각해서 . 뒤에 소수가 올 것이라 생각한다. 그런데 1.toFixed(2); 같은 경우에는 .뒤에 숫자가 아니라 함수가 와버려서 js가 당황한 나머지 에러를 뿜어준 것이다. 반면 
 ```
 1.232.toFixed(2) // "1.23"
 ```
