--- a/_posts/2018-11-26-웹으로보는네트워크(2).md
+++ b/_posts/2018-11-26-웹으로보는네트워크(2).md
@@ -11,7 +11,7 @@ comments: true
 ## 프로토콜 스택
 프로토콜 스택이 무엇인지 알기 전에, 프로토콜은 어디서 정보를 얻어오고, 또 어디로 요청을 하는지, 그 흐름을 그려보았다. 
 
-![protocol_stack](/public/img/network/2.png)
+![protocol_stack](/public/img/network/2.PNG)
 
 **큰 흐름**은 위에서 아래로 흐른다. 프로토콜 스택은 app(브라우저)에서 메시지를 전달 받는다. 메시지를 아주 작은 데이터인 패킷들로 나누고, 수신처 주소등의 제어 정보를 덧붙인다. 그리고 프로토콜 스택과 LAN어댑터가 연대하여 패킷을 전기나 빛의 신호로 변환하고, LAN어댑터가 실제로 송수신 동작, 즉 케이블에 대해 신호를 송수신하는 동작을 실행한다.
 
@@ -24,7 +24,7 @@ comments: true
 프로토콜 스택이 tcp 통신을 의뢰받았다면 부가적인 정보들은 위의 그림에서 **tcp박스**가 담당한다. 정확히 말하자면 부가적인 정보들을 담을 메모리 확보 절차를 소켓 작성이라고 한다. tcp박스, 더 큰 개념으로 프로토콜 스택이 소켓을 작성을 완료하면 브라우저에게 이 사실을 알리고, 언제든 이 소켓을 사용해 통신할 수 있게끔 일종의 리모콘(?)을 준다.
 
 ### 부가적인 제어 정보는 매번 전송된다.
-![tcp_header](/public/img/network/tcp_header.jpg)
+![tcp_header](/public/img/network/tcp_header.JPG)
 
 그림에서 보듯이 통신을 위한 부가적인 제어 정보는 포트 번호, 시퀀스 번호(송신 데이터의 일련 번호), ACK 번호(수신 데이터의 일련 번호) 등 많은 정보가 있다. 이런 정보는 클라이언트와 서버가 대화할 때 마다 늘 필요하다. 따라서 클라이언트와 서버 사이에 주고받는 패킷의 맨 앞부분에 추가하는데, 이 추가하는 영역을 헤더 영역이라고 한다. 물론 ip영역에서도 ip나름의 헤더가 붙게된다.
 
