--- a/_posts/2018-11-26-웹으로보는네트워크(2).md
+++ b/_posts/2018-11-26-웹으로보는네트워크(2).md
@@ -24,6 +24,7 @@ comments: true
 프로토콜 스택이 tcp 통신을 의뢰받았다면 부가적인 정보들은 위의 그림에서 **tcp박스**가 담당한다. 정확히 말하자면 부가적인 정보들을 담을 메모리 확보 절차를 소켓 작성이라고 한다. tcp박스, 더 큰 개념으로 프로토콜 스택이 소켓을 작성을 완료하면 브라우저에게 이 사실을 알리고, 언제든 이 소켓을 사용해 통신할 수 있게끔 일종의 리모콘(?)을 준다.
 
 ### 부가적인 제어 정보는 매번 전송된다.
+
 ![tcp_header](/public/img/network/tcp_header.JPG)
 
 그림에서 보듯이 통신을 위한 부가적인 제어 정보는 포트 번호, 시퀀스 번호(송신 데이터의 일련 번호), ACK 번호(수신 데이터의 일련 번호) 등 많은 정보가 있다. 이런 정보는 클라이언트와 서버가 대화할 때 마다 늘 필요하다. 따라서 클라이언트와 서버 사이에 주고받는 패킷의 맨 앞부분에 추가하는데, 이 추가하는 영역을 헤더 영역이라고 한다. 물론 ip영역에서도 ip나름의 헤더가 붙게된다.
@@ -42,6 +43,6 @@ TCP통신 방식은, 최초 통신때 이런 방식으로 서버와 클라이언
 
 3. 클라이언트 : 메세지 잘 받았어! 이제 서로 통신이 잘 된다는 것을 알았으니 마음편히 통신하자 :smile:
 
-이렇게 연결이 되고 나면 close를 호출하여 연결을 끊을 때까지 연결이 계속 존재한다.
+이렇게 연결이 되고 나면 둘중 한 측이 close를 호출하여 연결을 끊을 때까지 연결이 계속 존재한다.
 
 더 깊고 자세하고 세련되고 훌륭한 내용은 [한재엽님의 좋은 자료](http://asfirstalways.tistory.com/356)를 참조하자.
