--- a/_posts/2018-11-26-웹으로보는네트워크(2).md
+++ b/_posts/2018-11-26-웹으로보는네트워크(2).md
@@ -46,3 +46,15 @@ TCP통신 방식은, 최초 통신때 이런 방식으로 서버와 클라이언
 이렇게 연결이 되고 나면 둘중 한 측이 close를 호출하여 연결을 끊을 때까지 연결이 계속 존재한다.
 
 더 깊고 자세하고 세련되고 훌륭한 내용은 [한재엽님의 좋은 자료](http://asfirstalways.tistory.com/356)를 참조하자.
+
+## TCP가 신뢰성있게 데이터를 송수신하는 원리
+tcp헤더에는 sequence number와 ack가 있다. tcp를 통해 신뢰성 있는 전송을 하기 위해서는 sequence number와 ack가 상당히 중요하다.
+* Sequence Number : tcp는 애플리케이션(브라우저)에서 넘겨 받는 데이터가 크다면 이를 여러개의 패킷(세그먼트)로 쪼개어 서버로 전송한다. 즉, 여러번 서버로 데이터를 전송 하게 되는데, 이때 세그먼트들의 순서를 의미하는게 sequence number라고 볼 수 있다. 예를 들어 3000byte 짜리 파일을 전송한다고 하자. 이때 한번에 보낼 수 있는 데이터가 100byte라면 tcp는 30개의 세그먼트로 쪼개어 서버로 전송할 것이다. 이럴 경우, 각 세그먼트의 sequence number field에 순서를 의미하는 번호를 붙인다. 1,2,3 이렇게 나타내는게 아니라 byte형식으로 나타낸다. 즉, 첫 번째 세그먼트가 0이라면, 두 번째는 100, 세 번째는 200. 이런 식으로 Sequence Number를 할당하여 서버측으로 함께 보낸다.
+
+* ACK : 받은 것에 대한 응답이다. 즉, 클라이언트에서 요청을 받은 후, 다시 클라이언트로 보내는 값이다. 어떤 값을 다시 클라이언트로 보낼까? 서버는 클라이언트로부터 앞으로 받아야 할 다음 데이터의 squence number를 ACK로 설정하고 보낸다. 즉, 클라이언트로 부터 sequence number가 0인 세그먼트를 받았다면, 서버는 이에 대한 응답으로 ack : 100 을 응답한다. 0번을 받았으니 이제 다음으로 받고 싶은 sequence number 100를 ack로 보내는 것이다.
+
+이렇게 할 경우, 클라이언트 측이 서버로부터 받을 것이라고 기대했던 ack값이 오지 않을 경우 tcp가 다시 해당 세그먼트를 전송하기 때문에 신뢰가 있다. 자세히 들어가면 더 복잡한 방법으로 신뢰적이지만 여기서는 여기까지만 포스팅 하겠다.
+
+### NEXT
+앞에서 언급했지만 결국 TCP도 IP에게 의뢰한다. TCP에 대해서 얕게 알아보았으니 IP에 대해서도 어느 정도 알아보겠다.
+
