--- a/_posts/2018-12-2-일일커밋회고.md
+++ b/_posts/2018-12-2-일일커밋회고.md
@@ -23,9 +23,11 @@ comments: true
 
 ![lazy_cat](/public/img/blabla/lazyCat.PNG)
 
-솔직히 말해서 정말 바쁘거나 지칠 때는 쉬운 알고리즘 문제 하나만 풀어서 커밋한 적도 꽤 있다. 쉽다고 생각해서 풀고 끝내려 했지만 몇시간이 걸린 문제도 있지만 힘들 때는 그렇게 했다. 나는 이 것이 일일커밋의 가장 큰 장점이라고 생각한다. 늘 하던 사이드 프로젝트나 TLD(Today I Learned) 같은 것들은 일일커밋이 아니었어도 했을 것들이다. 물론 쉬고 싶을 때, 일일 커밋 때문에 마음을 가다듬고 사이드프로젝트를 함으로써 덕을 본 것도 있지만, 그것 조차 하기 싫을 때는 간단한 알고리즘을 풀었다. 이게 왜 큰 장점일까? 
+솔직히 말해서 정말 바쁘거나 지칠 때는 쉬운 알고리즘 문제 하나만 풀어서 커밋한 적도 꽤 있다. 쉽다고 생각해서 금방 풀고 끝내려 했지만 몇 시간이 걸린 문제도 있지다. 아무튼 나는 힘들 때 그렇게 했다. 
 
-일일 커밋은 사이드프로젝트조차 하기 싫을 때도 나를 컴퓨터 앞에 앉게 해서 코드를 만지게 했다. 알고리즘을 풀게해서 큰 장점이아니라, 어찌되었든 나를 코딩하게 시킨다는 점이다. **일일 커밋에 멱살잡혀 키보드앞에 앉고, 막상 코드를 한줄 두줄 짜고, 깃헙을 보게되고, 내가 쌓아온 잔디밭(?)들을 보면 내가 왜 오늘 코드를 짜기 싫어했지? 라는 생각이 든다.** 막상 멱살잡혀 코딩을 하면 또 그게 재밌다는걸 꺠닫는다. 문제는 마음가짐이었던 것이다. 아침에 막 일어나서 더 자고싶은 마음에 아침 밥을 포기하려고 생각했는데, 막상 누가 억지로 깨워 나를 밥상 앞에 끌고더니 메뉴가 최고급 호텔식 요리인 경우라고 하는게 좋은 예시인지 모르겠다. 막상 먹으면 정말 맛잇게 먹을거면서. 결국 문제는 아침에 일어나는게 싫은 그 짧은 유혹을 못이기는 마음가짐인데, 일일 커밋은 그런 나를 호텔식 요리 앞에 끌고가준다.
+나는 이 것이 일일 커밋의 가장 큰 장점이라고 생각한다. 늘 하던 사이드 프로젝트나 TLD(Today I Learned) 같은 것들은 일일커밋이 아니었어도 했을 것들이다. 물론 쉬고 싶을 때, 일일 커밋 때문에 마음을 가다듬고 사이드프로젝트를 함으로써 덕을 본 것도 있지만, 그것 조차 하기 싫을 때는 간단한 알고리즘을 풀었다. 이게 왜 큰 장점일까? 
+
+일일 커밋은 사이드 프로젝트조차 하기 싫을 때도 나를 컴퓨터 앞에 앉게 해서 코드를 만지게 했다. 알고리즘을 풀게해서 큰 장점이 아니라, 어찌되었든 나를 코딩하게 시킨다는 점이다. **일일 커밋에 멱살잡혀 키보드앞에 앉고, 막상 코드를 한줄 두줄 짜고, 깃헙을 보게되고, 내가 쌓아온 잔디밭(?)들을 보면 내가 왜 오늘 코드를 짜기 싫어했지? 라는 생각이 든다.** 막상 멱살잡혀 코딩을 하면 또 그게 재밌다는걸 깨닫는다. 문제는 마음가짐이었던 것이다. 아침에 막 일어나서 더 자고싶은 마음에 아침 밥을 포기하려고 생각했는데, 막상 누가 억지로 깨워 나를 밥상 앞에 끌고갔더니 메뉴가 최고급 호텔식 요리인 경우라고 하는게 좋은 예시인지 모르겠다. 막상 먹으면 정말 맛잇게 먹을거면서. 결국 문제는 아침에 일어나는게 싫은, 그 짧은 유혹을 못이기는 마음가짐인데, 일일 커밋은 그런 나를 호텔식 요리 앞에 끌고가준다.
 
 ## 규칙을 만들고 지켜나가자
 사실 매일 매일 쉬운 알고리즘 하나 풀고 커밋을 해도 일일 커밋이다. 그러나 고작 잔디밭이나 풍성하게 가꾸자고 일일 커밋을 하는게 아니기 때문에 스스로 지켜야할 규칙이 필요하다. 구글에 검색해보면 일일 커밋을 하는 개발자들이 각자 세운 일일 커밋 규칙들이 있는데, 솔직히 나는 딱히 규칙이랄 게 없었다. 일일 커밋을 시작하는 단계이니 매일 매일 커밋하는 것에 의미를 두자고 생각했던 것 같다. 그러나 이제 어느덧 6개월이 되었고, 조금더 의식적이 성장이 필요하다는 생각이 든다. 그래서 규칙을 몇가지만 적어놓고 틈날 때마다 상기하려고 한다. 
@@ -40,4 +42,4 @@ comments: true
 - **앞으로 자주 회고 하며 필요한 규칙을 더 추가해 나가자.**
 
 ## 결론
-가끔은 굳이 이렇게 까지 하지 않아도 열심히 코딩할 자신이 있다는 생각이 들긴하지만, 과감히 버릴수 없는 나만의 약속인 것 같다. 어떻게 보면 큰일이 아닐 수도 있는 이 일일 커밋을 한가한 학생일떄 조차 못한다면 내가 끈기 있는 사람이라고 할 수 있을까. 꼭 끝까지 이어나가서 1년이 되었을 때 다시한번 회고록을 쓸 수 있도록 하겠다!
+가끔은 굳이 이렇게 까지 하지 않아도 열심히 코딩할 자신이 있다는 생각이 들긴하지만, 이제는 과감히 버릴 수 없는 나만의 약속인 된 것 같다. 어떻게 보면 큰 일이 아닐 수도 있는 이 일일 커밋을 한가한 학생일떄 조차 못한다면 내가 끈기 있는 사람이라고 말할 수 있을까. 꼭 끝까지 이어나가서 1년이 되었을 때 다시한번 회고록을 쓸 수 있도록 하겠다!
