알고리즘 문제들 제목 수정

--- a/_posts/2018-12-03-백준11003번문제.md
+++ b/_posts/2018-12-03-백준11003번문제.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 백준 11003번 문제
+title: 백준 11003번 문제 (최솟값 찾기)
 category: algorithm
 tags: [algorithm, java, sliding_window]
 comments: true
