--- a/_posts/2018-12-04-백준10451.md
+++ b/_posts/2018-12-04-백준10451.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 백준 10451번 문제
+title: 백준 10451번 (순열사이클)
 category: algorithm
 tags: [algorithm, java, bfs, graph]
 comments: true
