알고리즘 문제 제목 변경

--- a/_posts/2018-12-03-백준11003번문제.md
+++ b/_posts/2018-12-03-백준11003번문제.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 백준 11003번 문제 (최솟값 찾기)
-category: algorithm
+title: 백준 11003번 문제 (최솟값 찾기) with Java
+category: Algorithm
 tags: [algorithm, java, sliding_window]
 comments: true
 ---
