--- a/_posts/2018-12-04-백준10451.md
+++ b/_posts/2018-12-04-백준10451.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 백준 10451번 (순열사이클)
-category: algorithm
+title: 백준 10451번 (순열사이클) with Java
+category: Algorithm
 tags: [algorithm, java, bfs, graph]
 comments: true
 ---
