req.params vs req.query 포스트 오타 수정

--- a/_posts/2018-11-10-req.params vs req.query.md
+++ b/_posts/2018-11-10-req.params vs req.query.md
@@ -30,7 +30,7 @@ console.log(req.params); // { id: '1', name: 'jun' }
 
 한편 req.query를 출력하면 아래와 같다.
 ```javascript
-console.log(req.params); // { title : 'hello!' }
+console.log(req.query); // { title : 'hello!' }
 ```
 
 즉, url에서 ?뒤에 입력되는 query문을 req.query로 받아오는 것이다.
