--- a/_posts/2018-12-31-2018회고.md
+++ b/_posts/2018-12-31-2018회고.md
@@ -28,14 +28,14 @@ comments: true
 ### 3. 사이드 프로젝트
 사이드 프로젝트를 쉬지않고 했다. 학생이여서 가능한 일일거라 생각한다. **새로운 언어,기술,프레임워크를 익히는데에 이렇게 좋은 방법은 없다고 생각했고 효과도 톡톡히 보아왔기 때문에 꾸준히 이어왔다.**
 
-2018년 사이드프로젝트는 오로지 내 실력 향상을 위한 목적이었다. 개발이 완료되었기 때문에 실제 배포를 해서 운영을 해도 될 거라 생각했지만, 그러기 보단 또 새로운 기술, 언어를 익히고 사용해보기위해 새로운 사이드 프로젝트를 시작하는 방식이었다. 2019년도에는 실제로 사이드 프로젝트의 수준이 괜찮다 싶으면 배포까지 해보려고 한다. 사이드프로젝트의 텀이 길어지더라도 더 많은 것을 공부할 수 있는 경험이 될거라 생각한다.
+2018년 사이드프로젝트는 오로지 내 실력 향상을 위한 목적이었다. 개발이 완료되었기 때문에 실제 배포를 해서 운영을 해도 될 거라 생각했지만, 그러기 보단 또 새로운 기술, 언어를 익히고 사용해보기위해 새로운 사이드 프로젝트를 시작하는 방식이었다. 2019년도에는 실제로 사이드 프로젝트의 수준이 괜찮다 싶으면 배포까지 해보려고 한다. 사이드 프로젝트의 텀이 길어지더라도 더 많은 것을 공부할 수 있는 경험이 될거라 생각한다.
 
 ### 4. 독서
 2주일에 1권(?)정도 꾸준히 책을 읽었다. 개발 서적이든 문학이든 자기계발이든 한 권씩은 읽었다. 
 
 ![독서](/public/img/blabla/reading.jpg)
 
-솔직히... 정말 바쁜 주에는 하루에 한글자도 읽지 못한날도 있었다. 내가 반성하고 싶은 것dms 이 부분이다. 시간없어서 못읽었다는 것은 독서의 고수들이 듣기에 그저 변명거리이다. **책은 시간 나서 읽는게 아니라, 시간 내서 읽는 것이기 때문이다.**
+솔직히... 정말 바쁜 주에는 하루에 한글자도 읽지 못한날도 있었다. 내가 반성하고 싶은 것은 이 부분이다. 시간없어서 못읽었다는 것은 독서의 고수들이 듣기에 그저 변명거리이다. **책은 시간 나서 읽는게 아니라, 시간 내서 읽는 것이기 때문이다.**
 
 앞으로 내 인생에 어떤 일이 주어질지는 모르겠지만, 하루 최소 30분도 읽지 않은 날은 없도록 하려고 한다. 또한 정말 내 머리에 도끼를 찍는듯한 울림을 준 책들은 두 번, 세 번 읽어야 겠다. 공부의 왕도는 반복이니 인생 공부인 독서도 반복이 필수인데 왜 여지껏 책은 반복해서 읽지 못하고 흘려보냈을까...(~~책값도 아끼고 얼마나 좋아~~)
 
