--- a/_posts/2018-11-10-req.params vs req.query.md
+++ b/_posts/2018-11-10-req.params vs req.query.md
@@ -40,6 +40,6 @@ console.log(req.query); // { title : 'hello!' }
 req.body는 XML, JSON, Multi Form 등의 데이터를 담는다. 주소에선 확인할 수 없고 post method를 사용할 때 쓴다. delete나 get을 사용할 때, axios에 data : { ~ ~ } 이렇게 data를 사용하면 서버에서 받아올 수 가 없다.
 
 ## 결론
-axios에서 추가 데이터를 보내는 방법에는 data와 params가 있다. data는 post요청청을 보낼 때 사용되는 객체이며, params는 위의 예시처럼 url에 포함되는 데이터를 넣어주는 것이다. **주의해야 할 점은, 서버에서는 req.params를 사용하면 예상된 변수(?)값을 받아오는 의미이지만, axios에서는 params가 ?뒤에오는 쿼리문을 뜻한다. 헷갈리지 말자!**
+axios에서 추가 데이터를 보내는 방법에는 data와 params가 있다. data는 post요청을 보낼 때 사용되는 객체이며, params는 위의 예시처럼 url에 포함되는 데이터를 넣어주는 것이다. **주의해야 할 점은, 서버에서는 req.params를 사용하면 예상된 변수(?)값을 받아오는 의미이지만, axios에서는 params가 ?뒤에오는 쿼리문을 뜻한다. 헷갈리지 말자!**
 
 추가적으로 XML, JSON, Multi Form등을 사용해야 할 때는 post 요청을 보낼 때다. delete, get을 사용할 때는, data로 넘기지말고 params로 간단히 id를 넘겨야 한다.
