객체지향의사실과 오해 오타 수정

--- a/_posts/2019-01-15-객체지향의사실과오해.md
+++ b/_posts/2019-01-15-객체지향의사실과오해.md
@@ -16,7 +16,7 @@ comments: true
 ## 메시지를 주고받는 객체의 관점으로 사고의 중심 전환하자
 **훌륭한 객체지향 설계자가 되기 위해**거쳐야 할 첫 번째 도전은 코드를 담는 클래스의 관점에서 메시지를 주고받는 객체의 관점으로 사고의 중심을 전환하는 것이라고 말한다. 중요한 것은 어떤 클래스가 필요한가가 아니라 어떤 객체들이 어떤 메시지를 주고받으며 협력하는 가다. 클래스는 협력에 참여하는 객체를 만드는 데 필요한 구현 메커니즘일 뿐이다. 
 
-객체를 만들려면 클래스가 필요하니 객체보단 클래스를 먼저 공부하게 되고, 상속, 다형성, 추상화 등등의 내용이 모드 클래스를 기반으로 설명이 되어있다 보니 나도모르게 객체지향을 클래스지향으로 인식하고 있었던 것 같다. 그러나 이 책은, 아니 객체지향을 정확히 이해한 고수들은 하나같이 **객체**를 사고의 중심에 두고 있다는 것을 알게되었다. 따라서 객체지향 설계를 위해서는 클래스보다 객체를 먼저, 더 나아가 필요한 객체를 파악하기 위해서 객체의 존재 이유, 즉 메시지를 먼저 파악하는 것이 중요하다.
+객체를 만들려면 클래스가 필요하니 객체보단 클래스를 먼저 공부하게 되고, 상속, 다형성, 추상화 등등의 내용이 모두 클래스를 기반으로 설명이 되어있다 보니 나도모르게 객체지향을 클래스지향으로 인식하고 있었던 것 같다. 그러나 이 책은, 아니 객체지향을 정확히 이해한 고수들은 하나같이 **객체**를 사고의 중심에 두고 있다는 것을 알게되었다. 따라서 객체지향 설계를 위해서는 클래스보다 객체를 먼저, 더 나아가 필요한 객체를 파악하기 위해서 객체의 존재 이유, 즉 메시지를 먼저 파악하는 것이 중요하다.
 
 ## 흔한 오류!
 **객체지향에 대한 대표적인 선입견, 오류는 객체지향이 클래스와 클래스 간의 관계를 표현하는 시스템의 정적인 측면에 중점을 둔다는 것이다.** 중요한 것은 정적인 클래스가 아니라 협력에 참여하는 동적인 객체이며, 클래스는 단지 시스템에 필요한 객체를 표현하고 생성하기 위해 프로그래밍 언어가 제공하는 구현 메커니즘이라는 사실을 기억해야 한다. 객체지향의 핵심은 클래스를 어떻게 구현할 것인가가 아니라 **객체가 협력 안에서 어떤 책임과 역할을 수행할 것인지**를 결정하는 것이다. 객체는, 절대 독립적인 존재로 바라보면 안된다. 꼭 협력속에서 역할을 수행하는 유동적인 존재로 봐야한다.
