--- a/_posts/2018-08-20-클린코드_함수.md
+++ b/_posts/2018-08-20-클린코드_함수.md
@@ -10,7 +10,7 @@ comments: true
 함수를 만드는 첫째 규칙은 '작게!'다. 함수를 만드는 둘째 규칙은 '더 작게!'다.
 
 ### 블록과 들여쓰기
-if 문/else 문/while 문 등에 들어가는 블록은 한줄이어야 한다. 대게 거기서 함수를 호출한다. 그러면 바깥을 감싸는 함수가 작아질 뿐 아니라, 블록 안에서 호출하는 함수 이름을 적절히 짓는다면, 코드를 이애하히고 쉬워진다. 함수에서 들여쓰기 수준은 1단이나 2단을 넘어서면 안된다. 그래야 함수는 읽고 이해하기 쉬워진다.
+if 문/else 문/while 문 등에 들어가는 블록은 한줄이어야 한다. 대게 거기서 함수를 호출한다. 그러면 바깥을 감싸는 함수가 작아질 뿐 아니라, 블록 안에서 호출하는 함수 이름을 적절히 짓는다면, 코드를 이애하히고 쉬워진다. **함수에서 들여쓰기 수준은 1단이나 2단을 넘어서면 안된다.** 그래야 함수는 읽고 이해하기 쉬워진다.
 
 ## 한 가지만 해라!
 **함수는 한 가지를 해야 한다. 그 한 가지를 잘 해야 한다. 그 한 가지만을 해야 한다.**
@@ -25,7 +25,7 @@ if 문/else 문/while 문 등에 들어가는 블록은 한줄이어야 한다. 
 ## 서술적인 이름을 사용하라!
 좋은 이름이 주는 가치는 아무리 강조해도 지나치지 않다. 워드가 말했던 원칙을 기억하는가? "코드를 읽으면서 짐작했던 기능을 각 루틴이 그대로 수행한다면 깨끗한 코드라 불러도 되겠다." 함수가 작고 단순할수록 서술적인 이름을 고르기도 쉬워진다.
 
-**이름이 길어도 괜찮다.** 길고 서술적인 이름이 짧고 어려운 이름보다 좋다. 길고 서술적인 이름이 길고 서술적인 주석보다 좋다. 이름을 정하느라 시간을 들여도 괜찮다. 이런저런 이름을 넣어 코드를 읽어보면 더 좋다.
+**이름이 길어도 괜찮다.** **길고 서술적인 이름이 짧고 어려운 이름보다 좋다.** 길고 서술적인 이름이 길고 서술적인 주석보다 좋다. 이름을 정하느라 시간을 들여도 괜찮다. 이런저런 이름을 넣어 코드를 읽어보면 더 좋다.
 
 ## 함수 인수 (따끔)
 함수에서 이상적인 인수 개수는 0개다. 다음은 1개(단항)고, 다음은 2개(이항)다. 3개 이상은 가능한 피하는 편이 좋다. 4개 이상은 특별한 이유가 필요하다. 특별한 이유가 있어도 사용하면 안된다(~~뜨아...내 코드를 당장 다시 봐야겠다~~).
@@ -35,7 +35,7 @@ if 문/else 문/while 문 등에 들어가는 블록은 한줄이어야 한다. 
 테스트 관점에서 보면 인수는 더 어렵다. 갖가지 인수 조합으로 함수를 검증하는 테스트 케이스를 작성한다고 상상해보라. 인수가 없다면 간단하다. 인수가 하나라도 괜찮다. 인수가 2개면 조금 복잡해진다.
 
 ### 플래그 인수
-플래그 인수는 추하다. 함수로 boolean값을 넘기는 관례는 정말로 끔찍하다. 왜냐고? 함수가 한꺼번에 여러 가지가지를 처리한다고 대놓고 공표하는 셈이니까! 플래그가 참이면 이걸 하고 거짓이면 저걸 한다는 말이니까!
+**플래그 인수는 추하다.** 함수로 boolean값을 넘기는 관례는 정말로 끔찍하다. 왜냐고? 함수가 한꺼번에 여러 가지가지를 처리한다고 대놓고 공표하는 셈이니까! 플래그가 참이면 이걸 하고 거짓이면 저걸 한다는 말이니까!
 
 ### 이항 함수
 인수가 2개인 함수는 인수가 1개인 함수보다 이해하기 어렵다. 예를 들어, writeField(name)은 writeField(outputStream, name)보다 이해하기 쉽다. 둘다 의미는 명백하지만 전자가 더 쉽게 읽히고 더 빨리 이해된다.
@@ -63,6 +63,6 @@ if (attributeExists("username")) { // 2. 반환하거나(답하거나)
 ## 정리
 변수명 편에서는 나름 따끔한 내용들이 많지 않았다고 생각했는데, 함수 편에서는 따끔한 내용들이 여럿 보였다. if문이 깊어진다던지 명령과 조회를 한번에 묶어서 코드를 짠다던지 오류 코드를 반환한다던지...
 
-책의 마지막에도 나오지만 처음부터 코드를 깔끔하게 작성할 수는 없다. 누구든지 처음에는 길고 복잡하다. 이 책에서 나온 안좋은 예시들에 해당하는 코드들이 상당히 많지만, 계속해서 꾸준히 가다듬고, 변수명을 다시 짓고, 인수를 줄이고 하는 과정을 거치다 보면 어느새 훌륭한 코드가 완성되어 있을 것이다. 
+책의 마지막에도 나오지만 **처음부터 코드를 깔끔하게 작성할 수는 없다. 누구든지 처음에는 길고 복잡하다.** 이 책에서 나온 안좋은 예시들에 해당하는 코드들이 상당히 많지만, 계속해서 꾸준히 가다듬고, 변수명을 다시 짓고, 인수를 줄이고 하는 과정을 거치다 보면 어느새 훌륭한 코드가 완성되어 있을 것이다. 
 
 무엇 보다 중요한 것은, 좋은 코드에 대한 생각을 품은 상태에서 코드를 짠다는 점인 것 같다. 매번 코딩할 때 마다 이 코드가 좋은 코드일까? 더 좋은 코드를 만들 수 없을까? 를 생각할 수 있느냐 없는 냐의 차이가 좋은 코드를 만드는 시작점이라는 생각이 든다.
