nodejs 입력받기 포스트 오탈자 수정

--- a/_posts/2018-09-26-Node.js 입력 받기.md
+++ b/_posts/2018-09-26-Node.js 입력 받기.md
@@ -6,7 +6,7 @@ tags: [node.js]
 comments: true
 ---
 
-늘 python으로 알고리즘을 풀다가 최근 함수형에 매료되어 javascript로 알고리즘을 풀려고 하고있다. 프로그래머스같은 경우는 입력이 자동으로 되기 때문에 함수만 작성하면 됬지만, 구름ide나 백준 알고리즘 같은 경우는 입력부터 코드를 작성해 받아야 한다. Node.js로 입력을 받는데 조금 헤맨 부분이 있어 입력 받는 방법을 간단하게만 정리해보기로 했다.
+[프로그래머스](https://programmers.co.kr/learn/challenges?tab=all_challenges)같은 경우는 입력이 자동으로 되기 때문에 함수만 작성하면 된다. 그러나 구름ide 또는 백준 알고리즘 같은 경우 테스트 케이스 입력을 받기 위한 코드를 작성해야한다. Node.js로 입력을 받는데 헤맨 부분이 있어 입력 받는 방법을 간단하게 정리해보기로 했다.
 
 ## readline
 백준 사이트에서 javascript로 풀어진 몇 예제를 보면
