맥 OS terminal에서 intelliJ 열기 포스트 제목 수정

--- a/_posts/2019-02-08-인텔리제이터미널에서실행.md
+++ b/_posts/2019-02-08-인텔리제이터미널에서실행.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 맥OS에 커맨드창에서 intelliJ 실행하기
+title: 맥 OS terminal에서 intelliJ 열기
 category: 개발 환경
 tags: [intelliJ, macOS]
 comments: true
