node.js 입력받기 포스트 업데이트

--- a/_posts/2018-09-26-Node.js 입력 받기.md
+++ b/_posts/2018-09-26-Node.js 입력 받기.md
@@ -15,8 +15,9 @@ var fs = require('fs');
 var input = fs.readFileSync('/dev/stdin').toString().split(' ');
 ```
 
-이렇게 입력을 받는 것을 볼 수가 있는데, 여기서 경로는 각자 사이트마다 다르기 때문에 사용할 수 없다. 또한 인터넷에 많은 예제들은 readline을 사용한다. 기본적인 형태는 아래와 같다.
+이렇게 입력을 받는 것을 볼 수가 있는데, 여기서 경로는 알고리즘 사이트마다 다르기 때문에 보편적으로 사용할 수 없다. 
 
+인터넷에 예제들을 보면 대부분 readline을 사용하고 있다. 기본적인 형태는 아래와 같다.
 ```javascript
 const readline = require("readline");
 const rl = readline.createInterface({
@@ -38,7 +39,7 @@ rl.close()
 ```
 부분이 없다면 무한으로 입력을 받으며 받은 만큼 실시간으로 console.log를 찍는다.
 
-간단한 예제로 두 수를 공백으로 구분지어 입력받은 후 합을 구해 출력하는 코드를 살펴보겠다.
+간단한 예제로 두 수를 공백으로 구분지어 입력받은 후 합을 구해 출력하는 코드를 살펴보자.
 ```javascript
 const readline = require('readline');
 const rl = readline.createInterface({
@@ -59,7 +60,7 @@ rl.on('line', function (line) {
 // 입력 : 1 2
 // 출력 : 3
 ```
-여기서 알아두어야 할 점은, 이 코드를 콘솔에서 실행하게 되면 close에 걸리지를 않아서 console.log가 찍히지 않고, 입력만 계속해서 여러 라인을 받게 된다. 그 이유는 콘솔에서 실행했기 때문이다. 콘솔에서는 interactive shell이 계속 열려있기 때문에 close가 호출되지 않는다. 그러나 이 코드를 구름 ide에서 실행하게 되면 [EOF](https://ko.wikipedia.org/wiki/%ED%8C%8C%EC%9D%BC_%EB%81%9D)에 걸리게 되어 정상적으로 console.log가 찍힌다.
+여기서 알아두어야 할 점은, 이 코드를 콘솔에서 실행하게 되면 close 이벤트에 걸리지를 않아서 console.log가 찍히지 않고, 입력만 계속해서 받게 된다. 그 이유는 콘솔에서 실행했기 때문이다. 콘솔에서는 interactive shell이 계속 열려있기 때문에 자동으로 close가 호출되지 않는다. 그러나 이 코드를 구름 ide에서 실행하게 되면 [EOF](https://ko.wikipedia.org/wiki/%ED%8C%8C%EC%9D%BC_%EB%81%9D)에 걸리게 되어 정상적으로 console.log가 찍힌다.
 
 *(백준 사이트나 구름 IDE 같은 경우 알고리즘을 테스트하기 위한 테스트 데이터들이 파일에 존재한다. 콘솔에서 실행하면 키보드로부터 입력을 받기 때문에 계속해서 입력 이벤트를 대기하게 되지만, 파일을 받게 되는 경우에는 파일의 데이터가 끝이나면 자동으로 EOF에 걸려 close되어 코드가 끝나는 것이다.)* 
 
