포스트 수정

--- a/_posts/2019-03-01-훌륭한개발자.md
+++ b/_posts/2019-03-01-훌륭한개발자.md
@@ -13,7 +13,7 @@ comments: true
 
 위에서 말한 훌륭하신 분들은 대부분 프로그래밍을 정말 사랑하시는 분들이 대부분이며 프로그래밍 자체를 즐기시는 것 같다. 그렇기에 새로운 기술이나 언어를 배우는 것을 즐기시고 코드를 짜며 희열을 느끼신다(**물론 정말 열심히 하는 다른 이유가 있을수도 있지만, 확실한 것은 기술을 배우고 코드를 짜는 것이 고통이 아니라는 것은 확실하다**). 그러나 대부분의 사람들은 그렇지 않을 수도 있다. 그저 학점 맞춰 컴퓨터 공학을 전공했다가 개발자로 취업 했을 수도 있고, 비 전공자이지만 호기심에 도전하여 개발자로 취업한 사람도 있을 것이다. 이들 중 일부는 코드를 정말 사랑하게 된 사람도 있을 것이고 그렇지 않은 분들도 있을 것이다. 
 
-그렇다면 개발을 딱 일거리 정도로만 생각하는 사람은 앞서 말한 훌륭한 개발자가 될 수 없을까? 코딩을 사랑하며 취미로 개발을 하거나 취미로 기술 공부를 하지 않는 일반 사람들은 훌륭한 개발자가 될 수 없을까? 훌륭한 개발자라는 정의를 코드를 잘 짜고 기술 습득력이 좋은 사람이라고만 정의한다면 사실은 힘들 것이라고 생각한다. **그러나 훌륭한 개발자의 기준을 누가 꼭 "실력"으로 정의했는가?** 꼭 그렇게 코딩 마스터스럽게 살지 않더라도 함께 일하고 싶은 사람, 코딩실력이 뛰어나진 않더라도 팀을 잘 이끌어 나가는 사람들도 정말 훌륭한 개발자라고 생각한다. 그리고 그런 능력은 어떻게 보면 기술을 익히고 코드를 잘 짜는 것 보다도 더 값진 능력 일 수도 있으며 팀 단위 생활에서는 꼭 필요한 사람들이다. 
+그렇다면 개발을 딱 일거리 정도로만 생각하는 사람은 앞서 말한 훌륭한 개발자가 될 수 없을까? 코딩을 미친듯이 사랑하지는 않는, 또는 취미로 개발을 하거나 취미로 기술 공부를 하지 않는 일반 사람들은 훌륭한 개발자가 될 수 없을까? 훌륭한 개발자라는 정의를 코드를 잘 짜고 기술 습득력이 좋은 사람이라고만 정의한다면 사실은 힘들 것이라고 생각한다. **그러나 훌륭한 개발자의 기준을 누가 꼭 "실력"으로 정의했는가?** 꼭 그렇게 코딩 마스터스럽게 살지 않더라도 함께 일하고 싶은 사람, 코딩실력이 뛰어나진 않더라도 팀을 잘 이끌어 나가는 사람들도 정말 훌륭한 개발자라고 생각한다. 그리고 그런 능력은 어떻게 보면 기술을 익히고 코드를 잘 짜는 것 보다도 더 값진 능력 일 수도 있으며 팀 단위 생활에서는 꼭 필요한 사람들이다. 
 
 무엇보다 중요한 것은, **개발자 인생을 살면서 스스로 행복한 삶을 살고 있다면 누구보다 훌륭한 개발자라고 생각한다.** 실력이 출중해서 기술 트렌드를 주도하거나 책을 쓰지 않더라도, 즉 "저 사람은 저렇게 훌륭해서 돈도 잘 벌고 이름도 널리 알리는데 나는 왜 이러지?" 라는 생각에서 벗어나, 다른 사람이 쓴 책을 읽으며 학습을 하고 코드를 짜는게 즐겁다면 훌륭한 개발자라고 생각한다. **꼭 강박을 가질 필요가 없다는 말이다. 꼭 메시, 호날두가 되지 않더라도 팀에는 없어서는 안될 훌륭한 선수들이 존재하다.**
 
