오탈자 수정

--- a/_posts/2019-03-01-맥_한영키_전환_속도_개선.md
+++ b/_posts/2019-03-01-맥_한영키_전환_속도_개선.md
@@ -6,7 +6,7 @@ tags: [macOS]
 comments: true
 ---
 
-mojave에서는 한영 전환을 capslock으로 한다. capslock으로 한영 전환을 하다보면 윈도우와는 달리 딜레이가 존재한다. 한글로 타이핑을 하다가 capslock을 누른 직후 영어 타이핑을 쳐도 여전히 한글이 쳐질때가 많다. 자세히는 모르겠지만 capslock 고유의 기능과 한영 전환 기능 두 개가 존재하기 때문에 생기는 딜레이인것 같다. 이 딜레이를 없애는 방법은 capslock고유의 기능을 없애는 방법이다(대부분 capslock고유의 기능은 잘 사용하지 않으므로..). 물론 익숙해지면 약간의 딜레이를 고려해 타이핑을 한다는 분도 계시지만 성격급한 나는 그 딜레이가 너무 싫었다.
+mojave에서는 한영 전환을 capslock으로 한다. capslock으로 한영 전환을 하다보면 윈도우와는 달리 딜레이가 존재한다. 한글로 타이핑을 하다가 capslock을 누른 직후 영어 타이핑을 쳐도 여전히 한글이 쳐질때가 많다. 자세히는 모르겠지만 capslock 고유의 기능과 한영 전환 기능 두 개가 존재하기 때문에 생기는 딜레이인것 같다. 이 딜레이를 없애는 방법은 capslock고유의 기능을 없애는 것이다(대부분 capslock고유의 기능은 잘 사용하지 않으므로 쿨하게 없애주자). 물론 익숙해지면 약간의 딜레이를 고려해 타이핑을 한다는 분도 계시지만 성질 급한 나는 그 딜레이가 너무 싫었다.
 
 ## Karabiner-Elements
 그냥 capslock 기능을 없앨 수는 없는 것 같다. [karabiner-Elements](https://pqrs.org/osx/karabiner/)의 도움을 받아야한다. 링크를 클릭하고 다운로드를 받아 설치하자.
