--- a/_posts/2018-08-17-크로스브라우징.md
+++ b/_posts/2018-08-17-크로스브라우징.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 크로스브라우징
+title: 크로스브라우징이란?
 category: Frontend
 tags: [cross-browsing, basic]
 comments: true 
 --- 
 
 ### 크로스 브라우징이란?
-세상에는 크롬, 사파리, 인터넷 익스플로어, 오페라, 파이어폭스, 웨일 등등 많은 브라우저들이 존재한다. 이렇게 많은 브라우저들의 동작 방식은 [W3C](https://ko.wikipedia.org/wiki/W3C)라는 국제 웹 표준화 기구에서 제공하는 스펙(가이드라인)을 따라서 동작하게 된다. 그러나 표준화 기구에서 제공하지 않는 스펙에 대한 아주 디테일한 내용들은 각자의 상황에 맞게, 각자의 스타일에 맞게 구현하게 되어있다. 그래서 개발자들은 자신이 짠 한줄의 코드가 모든 브라우저에서 동작할 것이라 생각하면 안된다. 예를 들어 과거 netscape라는 브라우저에서는 이벤트 등록을 아래의 메서드로 했다고 한다.
+세상에는 크롬, 사파리, 인터넷 익스플로어, 오페라, 파이어폭스, 웨일 등등 많은 브라우저들이 존재한다. 이렇게 많은 브라우저들의 동작 방식은 [W3C](https://ko.wikipedia.org/wiki/W3C)라는 국제 웹 표준화 기구에서 제공하는 스펙(가이드라인)을 따라서 동작하게 된다. 그러나 표준화 기구에서 제공하지 않는 스펙에 대한 아주 디테일한 내용들은 각자의 상황에 맞게, 각자의 스타일에 맞게 구현하게 되어있다. **그래서 개발자들은 자신이 짠 한줄의 코드가 모든 브라우저에서 동작할 것이라 생각하면 안된다.** 예를 들어 과거 netscape라는 브라우저에서는 이벤트 등록을 아래의 메서드로 했다고 한다.
 ```
 addEventListner
 ```
@@ -28,11 +28,11 @@ attachEvent
 
 또다른 해결 방법은 라이브러리를 활용하는 것이다. **jQeury**나 **underscore.js**, **Modernizr** 등등의 라이브러리는 이 라이브러리들이 제공하는 함수를 활용한다면 내부적으로 크로스브라우징 이슈를 해결해준다.
 
-추가적으로 css의 경우도 크로스브라우징이 발생한다. 
+추가적으로 css의 경우도 크로스브라우징이 발생하기 때문에 고려해야한다. 
 * [can i use](https://caniuse.com/)
 * [http://validator.w3.org/](http://validator.w3.org/)
 
-위와 같은 tool을 사용해서 이슈를 해결하도록 노력하자 
+위와 같은 온라인 tool을 사용해서 이슈를 해결하도록 노력하자 
 
 ### 참고자료
 * [크로스브라우징 이슈](https://github.com/nhnent/fe.javascript/wiki/%ED%81%AC%EB%A1%9C%EC%8A%A4%EB%B8%8C%EB%9D%BC%EC%9A%B0%EC%A7%95-%EC%9D%B4%EC%8A%88)
