회고 글 수정

--- a/_posts/2018-12-31-2018회고.md
+++ b/_posts/2018-12-31-2018회고.md
@@ -49,9 +49,9 @@ comments: true
 2019년도에는 영어 자격증을 취득하려고 한다. 사실 시험 요령에 맞춰 스킬을 요구하는 공부는 싫지만, 그래도 영어공부를 더 체계적으로 할 기회가 될테고, 매일 시간을 내서 공부를 할테고, "가시적 성과"인 자격증을 취득 할 수 있으니 꾸준히 해보려고 한다.
 
 ### 6. 가장 중요한 것. 효도.
-가장 중요한 것이다. 그러나 가장 지키지 못하는 것이다. 부모님 생각에 잠기면 나도 모르게 눈물이 나면서도 선뜻 표현하지 못하는 나는 못난 자식이다.
+가장 중요한 것이다. 그러나 가장 지키지 못하는 것이다. 부모님 생각에 잠기면 나도 모르게 눈물이 나면서도 선뜻 표현하지 못하는 나는 못난 자식인것 같다.
 
-블로그에 쓰고 싶은 내용이 많지만 정말 너무 많아서 담지를 못하겠다. 2019년도에는 학생동안 받았던 부모님의 지원, 사랑 모두 다 갚을 수 있는 한해가 되었으면 좋겠다.
+쓰고 싶은 내용이 많지만 정말 너무 많아서 담지를 못하겠다. 2019년도에는 학생동안 받았던 부모님의 지원, 사랑 모두 다 갚을 수 있는 한해가 되었으면 좋겠다.
 
 ### 마무리
 2018년은 8760시간이었다. 글쓰기 실력이 부족해서 8760시간을 되돌아 보고 포스팅하는데 1시간도 안걸린 것 같다. 2019년은 매시간 내가 성장할 수 있는 해로 살기위해 노력할 것이다. 많은 분들에게 조언을 구하고, 스스로 되짚어 보면서 꼭 눈에 띄게 성장하는 한해가 되길.
