오탈자 수정 및 가독성 개선

--- a/_posts/2018-10-21-퀵정렬.md
+++ b/_posts/2018-10-21-퀵정렬.md
@@ -24,7 +24,7 @@ comments: true
 동시에 right도 왼쪽으로 움직이는데, left와는 반대로 pivot값보다 작은 숫자를 만나면 stop한다. 
 ![quick3](/public/img/sorting/quick/quick3.PNG)
 
-둘이 멈춘 상태라면 이 둘의 위치를 바꿔준다.(즉, 5보다 큰 숫자는 배열의 뒷 쪽 쯤에, 5보다 작은 숫자는 배열의 앞쪽에 배치되게 된다.)
+둘이 멈춘 상태라면 이 둘의 위치를 바꿔준다. 둘의 위치를 바꾼 아래 그림을 보면, pivot값인 5보다 작은 값들이 점점 왼쪽으로 모이고 있음을 알 수 있다. 이 과정을 계속 진행하다보면 정렬이 될것 같은 느낌이든다(즉, 5보다 큰 숫자는 배열의 뒷 쪽 쯤에, 5보다 작은 숫자는 배열의 앞쪽에 배치되게 된다).
 ![quick4](/public/img/sorting/quick/quick4.PNG)
 
 한번더 진행해 보자. left를 오른쪽으로, right를 왼쪽으로 진행시키면서 아까와 같은 행위를 반복한다.
