클린코드 오탈자 수정

--- a/_posts/2019-02-07-클린코드_경계.md
+++ b/_posts/2019-02-07-클린코드_경계.md
@@ -144,7 +144,7 @@ public class LogTest {
 }
 ```
 
-모드 지식을 독자적인 로커 클래스로 캡슐화 한다. 그러면 나머지 프로그램은 log4j가 제공하는 인터페이스를 몰라도 된다(log4j 인터페이스가 변한다면 독자적으로 만든 클래스만 수정하자).
+모든 지식을 독자적인 로거 클래스로 캡슐화 한다. 그러면 나머지 프로그램은 log4j가 제공하는 인터페이스를 몰라도 된다(log4j 인터페이스가 변한다면 독자적으로 만든 클래스만 수정하자).
 
 ## 결론
 * 외부 API를 사용할 때 해당 부분 TEST CODE를 작성하며 익히고 사용하자.
