--- a/_posts/2019-04-05-드로이드나이츠2019후기.md
+++ b/_posts/2019-04-05-드로이드나이츠2019후기.md
@@ -31,7 +31,7 @@ comments: true
 ## 대부분 비슷하구나
 모든 세션을 완벽히 이해하진 못했지만, 안드로이드 진영에서 나름 실력있다고 하시는 분들의 발표를 듣다보면 공통점들을 발견할 수 있었다. 아키텍처에대한 고민과 현재 사용하고 있는 트렌디한 라이브러리들이다. 아키텍쳐에 대한 고민은 어떤 프로그래밍을 하던지 따라다니는 고민인 것 같다. 이제 겨우 mvvm을 조금씩 이해해 나가고 있는 단계라서 안드로이드 아키텍쳐 전반을 다루는 세션은 이해하기 어려운 부분이 많았지만, 오히려 React를 다루면서 했던 고민들이 떠올라 세션 이해에 도움이 되었던 부분도 있었다. 
 
-대다수 고민들이 아키텍쳐에서 오기 때문에 아키텍쳐에 관한 세션이 두개나 있었다. 따지고 보면 세부적으로 아키텍처를 다루는 세션들도 많았다. 모두 아키텍처라 고민이라는 공통점이 있지만 모두들 조금씩 다른 방법의 해법을 가지고 있었다. 강사의 취향에 따라, 가치관에 따라 조금씩 다른 그 아키텍처들을 모두 이해하진 못했지만, 한 가지 얻은 사실은 아키텍처에는 정답은 없고 해답만이 존재한다는 것이다.
+대다수 고민들이 아키텍쳐에서 오기 때문에 아키텍쳐에 관한 세션이 두개나 있었다. 따지고 보면 세부적으로 아키텍처를 다루는 세션들도 많았다. 모두 아키텍처라 고민이라는 공통점이 있지만 모두들 조금씩 다른 방법의 해법을 가지고 있었다. 강사의 취향에 따라, 가치관에 따라 조금씩 다른 그 아키텍처들을 모두 이해하진 못했지만, **한 가지 얻은 사실은 아키텍처에는 정답은 없고 해답만이 존재한다는 것.**
 
 한편 모든 강사분들이 예시로 든 코드에는 RxJava가 포함되어 있었다. 더불어 대부분 mvvm 패턴을 사용중이고, 여기저기서 이름만 많이 들어본 의존성 주입 라이브러리와 RxBinding, 또 개인적으로 정복하고 싶은 coroutine들도 상당히 많이 언급되었다. 이런 것들을 조금씩 스멀스멀 공부하고 있었는데 실제 현업에 계시는 훌륭한 개발자들이 모두 사용하고 있음을 확신하게 되어 조금은 안심이 되었다. 물론 다른 사람들이 많이 쓴다고 해서 무조건 따라야하는 것은 아니지만 아직 신입 2개월 차인 내가 할 수 있는 최선은 이런 것 아니겠나... ~~애기들이 엄마 아빠 말을 똑같이 따라하면서 말을 배우는 것 처럼....?~~
 
