오탈자 수정

--- a/_posts/2019-03-31-습관.md
+++ b/_posts/2019-03-31-습관.md
@@ -14,7 +14,7 @@ comments: true
 
 "이구아수 폭포를 보고싶어서 큰 마음, 큰 돈을 써서 보러 갔다오면 그 추억이 평생가니까 좋지 않나?"
 
-그러나 이내 생각이 바뀌었다. 내 기억속에 오래 머무르고 있는 과거의 행복한 추억들을 떠올린다 하더라도 그 시절 그 감정, 감동을 100% 느낄 순 없다. 추억거리가 전혀 없는 건 좋지 않지만, 때로는 그 시절로 돌아갈 수 없음에 아쉬움이 남기도 한다. 물론 이동진 작가는 이구아수 폭포를 보러가는것이 불행이라고 말한 적은 없다. 큰 행복이지만 긴 행복은 아니라는 것이다. 
+그러나 이내 생각이 바뀌었다. 내 기억속에 오래 머무르고 있는 과거의 행복한 추억들을 떠올린다 하더라도 그 시절 그 감정, 감동을 다시 100% 느낄 순 없다. 추억거리가 전혀 없는 건 좋지 않지만, 때로는 그 시절로 돌아갈 수 없음에 아쉬움이 남기도 한다. 물론 이동진 작가는 이구아수 폭포를 보러가는것이 불행이라고 말한 적은 없다. 큰 행복이지만 긴 행복은 아니라는 것이다. 
 
 습관의 힘이란 책을 보면, 인간의 행복감에 관한 심리학의 연구 결과는 공통적으로 **'행복은 기쁨의 강도가 아니라 빈도'**라고 말한다. 어떤 '큰 것 한 방'도 오래가지 않는다는 것이다.
 
