--- a/_posts/2019-04-05-드로이드나이츠2019후기.md
+++ b/_posts/2019-04-05-드로이드나이츠2019후기.md
@@ -15,12 +15,12 @@ comments: true
 나는 **오프라인과 웹 서비스** 세션을 제외하고는 모두 TRACK1에 머물러 있었다.
 
 
-작년 여름, 강남에서 열린 해커톤에 참여한 후 많은 자극을 받았던 좋은 경험을 떠올려 이런 큰 행사에 다시 한 번 참석해보고 싶은 생각이 들었다. 물론 드로이드나이츠가 모르는 사람들과 함께 코드를 짜는 해커톤은 아니지만, **많은 개발자들이 자신의 생각을 공유한다는 점, 학생, 주니어, 시니어 개발자를 따지지 않고 모두 적극적으로 배우려는 마음가짐 하나로 뭉쳐있다는 점에서 나를 다시 한 번 끌어 올려줄 좋은 기회라고 생각했다.** 물론 이런 전달식 행사 특성상 주된 목적은 정보 습득이겠지만.
+작년 여름 강남에서 열린 해커톤에 참여한 후 많은 자극을 받았던 좋은 기억을 떠올려 이런 큰 행사에 다시 한 번 참석해보고 싶은 생각이 들었다. 물론 드로이드나이츠라는 행사가 모르는 사람들과 함께 코드를 짜는 해커톤은 아니지만, **많은 개발자들이 자신의 생각을 공유한다는 점, 학생, 주니어, 시니어 개발자를 따지지 않고 모두 적극적으로 배우려는 마음가짐 하나로 뭉쳐있다는 점에서 다시 한 번 나를 끌어 올려줄 좋은 기회라고 생각했다.** 물론 이런 전달식 행사 특성상 주된 목적은 정보 습득이겠지만.
 
 ## 49%
-솔직히 나는 모든 세션을 통틀어 절반도 이해하지 못했다. 현업에 첫 발을 내딛자 마자 안드로이드와 코틀린 공부를 겨우 한 달 조금 넘게 한 직후이기 때문에 많은 것을 이해하지 못한 것이라고 핑계 삼고 싶다. 어떤 세션은 제목만 보고 내가 나름대로 공부하고 있는 부분이기에 이해가 잘 되지 않을까 하는 마음으로 들었으나, 실상은 내 지식너머 더 깊고 깊은 깊이까지 다룬 것도 있었다. 당연히 중간쯤 되어서 흐름과 이해를 모두 놓쳤다. 반면 아직은 내가 공부해 보지 않은 Dependency Injection을 다루는 세션같은 경우가 더 수월하기도 했다. 물론 그마저도 모두 이해가 된 건 아니어서 강사분이 했던 그 고민과, 고민을 해결했을 때의 통쾌함을 온전히 내 것으로 받아들이지 못했다.
+솔직히 나는 모든 세션을 통틀어 절반도 이해하지 못했다. 현업에 첫 발을 내딛자 마자 안드로이드와 코틀린 공부를 겨우 한 달 조금 넘게 한 직후이기 때문에 많은 것을 이해하지 못한 것이라고 핑계 삼고 싶다. 어떤 세션은 제목만 보고 내가 나름대로 공부하고 있는 부분이기에 이해가 잘 되지 않을까 하는 마음으로 들었으나, 실상은 내 지식너머 더 깊고 깊은 부분까지 다룬 것도 있었다. 당연히 중간쯤 되어서 흐름과 이해를 모두 놓쳤다. 반면 아직은 내가 공부해 보지 않은 Dependency Injection을 다루는 세션같은 경우 이해가 더 수월하기도 했다. 물론 그마저도 모두 이해가 된 건 아니어서 강사분이 했던 그 고민과, 해결했을 때의 통쾌함을 온전히 내 것으로 받아들이지는 못했다.
 
-**해당 세션이 이해 되지 않은 순간부터 지루함이 시작되었지만, 동시에 더 열심히, 더 격렬히 몸부림 치며 학습해야되겠구나 라는 생각에 빠지는 시간이 되었다.** 겨우 몇 시간 구글 뒤적 뒤적 거리며 예제코드 몇 번 찔끔 거린 수준으로 어디가서 "이거이거 써봤는데 정말 좋더라, 이건 이런 이런 형태로 쓰는거더라", "이거는 나랑 안맞더라, 이건 이렇게 쓰면 되는데 왜 이런 라이브러리를 만들었는지 모르겠더라" 라는 말은 삼가야겠다. 세션을 듣다보니 사용법이 쉬워서 간단히 쓰고있던 라이브러리도 깊게 들어가면 더 깊게 들어갈 수 있다는 것, 아니 오히려 깊게 들어가서 이해하고 사용해야 하는 것들이 많다는 것, 그리고 나는 그냥 단순하게 정말 누군가 만들어 놓은 코드를 사용만 하고 있다는 점 들을 다시 한 번 느끼게 되었다.
+**해당 세션이 이해 되지 않은 순간부터 지루함이 시작되었지만, 동시에 더 열심히, 더 격렬히 몸부림 치며 학습해야되겠구나 라는 생각에 빠지는 시간이 되었다.** 겨우 몇 시간 구글 뒤적 뒤적 거리며 예제코드 몇 번 찔끔 거린 수준으로 어디가서 "이거이거 써봤는데 정말 좋더라, 이게 진리더라", "이거는 나랑 안맞더라, 이건 이렇게 쓰면 되는데 왜 이런 라이브러리를 만들었는지 모르겠더라" 라는 말은 삼가야겠다. 세션을 듣다보니 사용법이 쉬워서 간단히 쓰고있던 라이브러리도 깊게 들어가면 더 깊게 들어갈 수 있다는 것, 아니 오히려 깊게 들어가서 이해하고 사용해야 하는 것들이 많다는 것, 그리고 나는 그냥 단순하게 정말 누군가 만들어 놓은 코드를 별다른 의심없이 그저 사용만 하고 있다는 점 들을 다시 한 번 느끼게 되었다.
 
 이건 여담이지만, 어떤 세션이 끝나고 화장실에서 참석자 두 사람이 하는 이야기를 들었다. 아키텍쳐에 대한 이야기였는데 해당 세션에 만족하지 못했던 분들이었나보다. "자기 생각에는 그것 보단 내 생각 더 나은 것 같은데.. 그리고 설명한 아키텍쳐에 대한 장점을 잘 모르겠더라, 장점을 설명하는 방법이 조금 잘못 된것 같다. 유명한 분이라 기대를 많이했는데 정말 실력있는 분 맞나?" 등등 조금 비꼬듯이 이야기를 주고 받고 있었다. 
 
@@ -29,11 +29,11 @@ comments: true
 
 
 ## 대부분 비슷하구나
-모든 세션을 완벽히 이해하진 못했지만, 안드로이드 진영에서 나름 실력있다고 하시는 분들의 발표를 듣다보면 공통점들을 발견할 수 있었다. 아키텍처에대한 고민과 현재 사용하고 있는 트렌디한 라이브러리들이다. 아키텍쳐에 대한 고민은 어떤 프로그래밍을 하던지 따라다니는 고민인 것 같다. 이제 겨우 mvvm을 조금씩 이해해 나가고 있는 단계라서 안드로이드 아키텍쳐 전반을 다루는 세션은 이해하기 어려운 부분이 많았지만, 오히려 React를 다루면서 했던 고민들이 떠올라 세션 이해에 도움이 되었던 부분도 있었다. 
+모든 세션을 완벽히 이해하진 못했지만, 안드로이드 진영에서 나름 실력있다고 하시는 분들의 발표를 듣다보면 공통점들을 발견할 수 있었다. **아키텍처에대한 고민과 현재 사용하고 있는 트렌디한 라이브러리들의 사용법이다.** 아키텍쳐에 대한 고민은 어떤 프로그래밍을 하던지 따라다니는 고민인 것 같다. 이제 겨우 mvvm을 조금씩 이해해 나가고 있는 단계라서 안드로이드 아키텍쳐 전반을 다루는 세션은 이해하기 어려운 부분이 많았지만, 오히려 React를 다루면서 했던 고민들이 떠올라 세션 이해에 도움이 되었던 부분도 있었다. 
 
-대다수 고민들이 아키텍쳐에서 오기 때문에 아키텍쳐에 관한 세션이 두개나 있었다. 따지고 보면 세부적으로 아키텍처를 다루는 세션들도 많았다. 모두 아키텍처라 고민이라는 공통점이 있지만 모두들 조금씩 다른 방법의 해법을 가지고 있었다. 강사의 취향에 따라, 가치관에 따라 조금씩 다른 그 아키텍처들을 모두 이해하진 못했지만, **한 가지 얻은 사실은 아키텍처에는 정답은 없고 해답만이 존재한다는 것.**
+대다수 고민들이 아키텍쳐에서 오기 때문에 아키텍쳐에 관한 세션이 두 개나 있었다. 따지고 보면 내부적으로 아키텍처를 다루는 세션들도 많았기에 두 개가 넘었다고 볼 수 있다. 모두 아키텍처 고민이라는 공통점이 있지만 다들 조금씩 다른 방법의 해법을 가지고 있었다. 강사의 취향에 따라, 가치관에 따라 조금씩 다른 그 아키텍처들을 모두 이해하진 못했지만, **한 가지 얻은 사실은 아키텍처에는 정답은 없고 해답만이 존재한다는 것.**
 
-한편 모든 강사분들이 예시로 든 코드에는 RxJava가 포함되어 있었다. 더불어 대부분 mvvm 패턴을 사용중이고, 여기저기서 이름만 많이 들어본 의존성 주입 라이브러리와 RxBinding, 또 개인적으로 정복하고 싶은 coroutine들도 상당히 많이 언급되었다. 이런 것들을 조금씩 스멀스멀 공부하고 있었는데 실제 현업에 계시는 훌륭한 개발자들이 모두 사용하고 있음을 확신하게 되어 조금은 안심이 되었다. 물론 다른 사람들이 많이 쓴다고 해서 무조건 따라야하는 것은 아니지만 아직 신입 2개월 차인 내가 할 수 있는 최선은 이런 것 아니겠나... ~~애기들이 엄마 아빠 말을 똑같이 따라하면서 말을 배우는 것 처럼....?~~
+한편 모든 강사분들이 예시로 든 코드에는 RxJava가 포함되어 있었다. 더불어 대부분 mvvm 패턴을 사용중이고, 여기저기서 이름만 많이 들어본 의존성 주입 라이브러리와 RxBinding, 또 개인적으로 정복하고 싶은 coroutine도 상당히 많이 언급되었다. 이런 것들을 조금씩 스멀스멀 공부하고 있었는데 실제 현업에 계시는 훌륭한 개발자들이 모두 사용하고 있음을 확신하게 되어 조금은 안심이 되었다. 물론 다른 사람들이 많이 쓴다고 해서 무조건 따라야하는 것은 아니지만 아직 신입 2개월 차인 내가 할 수 있는 최선은 이런 것 아니겠나... ~~애기들이 엄마 아빠 말을 똑같이 따라하면서 말을 배우는 것 처럼....?~~
 
 ## 결론은...
 조금 아쉬웠다. 내 실력이 모자라서 아쉬웠다. 많은 것을 배우고싶었지만, 내 실력이 모자라다는것을 많이 깨닫고 왔다. **RxJava 몇 번 써봤다고 어디가서 RxJava 쓸줄 안다고 당당하게 얘기하지 말고, MVVM 쓰고 있다고 MVVM에 대해 모든 것을 알고 있는 듯이 이야기 하지 말자.** 물론 정말 100% 통달했으면 뭐든 이야기해도 되지만, 그건 한참 뒤의 이야기가 될 것이 분명하다. **그냥 마음편하게, 다 아는 것 같아도 나는 아직 잘 모른다는 마인드로 살자.** 그리고 2020년 드로이드나이츠에 다시 참석해서, 내 이해도가 49%에서 얼마나 증가했는지 비교해보자!
