오탈자 수정

--- a/_posts/2019-03-31-습관.md
+++ b/_posts/2019-03-31-습관.md
@@ -18,11 +18,11 @@ comments: true
 
 습관의 힘이란 책을 보면, 인간의 행복감에 관한 심리학의 연구 결과는 공통적으로 **'행복은 기쁨의 강도가 아니라 빈도'**라고 말한다. 어떤 '큰 것 한 방'도 오래가지 않는다는 것이다.
 
-1월 추운 한겨울에 뚱뚱한 여성이, 7월 무더운 한 여름에 날씬한 몸매로 비키니를 입고 바닷가를 놀러가기 위해 7개월 동안 혹독한 다이어트를 하며 맛있는 음식을 참는다. 그 7개월을 묵묵히 참으며 건강을 위해, 여름을 위해 그 고통을 감내할 수 있는 사람은 그렇게 하면된다. 그러나 그게 정말 힘든 사람은 그 시간에 맛집 탐방 동호회에 가입해 꾸준히 행복을 유지하는 편이 오히려 더 유리하다. 
+1월 추운 한겨울에 뚱뚱한 여성이, 7월 무더운 한 여름에 날씬한 몸매로 비키니를 입고 바닷가를 놀러가기 위해 7개월 동안 혹독한 다이어트를 하며 맛있는 음식을 참고있다고 해보자. 그 7개월을 묵묵히 참으며 여름을 위해 그 고통을 감내할 수 있는 사람은 그렇게 하면된다. 그러나 그게 정말 힘들고 지겹고, 고통스러운 사람은 그 시간에 맛집 탐방 동호회에 가입해 꾸준히 행복을 유지하는 편이 오히려 더 유리하다. 
 
 잘나가는 사람 사람과 친해져보려 애쓰기보다 가족, 그리고 오래된 친구와의 관계를 돌아보는 것이 낫다. **습관처럼 내 곁에 있는 이들과의 관계가 불행하면 내 삶 또한 불행할 것이기 때문이다.**
 
-동일한 맥락으로, 당연한 이야기처럼 들리겠지만 미래에 대해 부정적인 마인드를 가지고 있는 사람보다 긍적적이고 밝게 보는 사람이 더 행복할 것 같다는 생각이 든다. 미래는 내가 죽기전 눈을 감기 전까기 항상 존재하는 개념이다. 늘 내곁에 존재하는 미래라는 개념은 결국 일상이고, 그 일상같은 미래를 "인공지능이 우리의 일자리를 다 빼앗아 갈거야, 미세먼지가 우리의 건강을 다 뺏어가고 말거야"라는 식으로 부정적으로만 생각한다면, 미래를 생각하는 현재를 행복하게 살 수 없다. **지금 당장 우리 개인이 어떻게 해결할 할 방법이 없는 미세먼지 같은 경우, 그냥 마스크를 꾹 눌러 착용하고 내게 남은 행복들을 생각하자.** 어쩔 수 없는 일을 가지고 부정인 생각으로 머릿속을 채울 필요가 뭐가 있나.
+동일한 맥락으로, 당연한 이야기처럼 들리겠지만 미래에 대해 부정적인 마인드를 가지고 있는 사람보다 긍적적이고 밝게 보는 사람이 더 행복할 것 같다는 생각이 든다. 미래는 내가 죽기전 눈을 감기 전까기 항상 존재하는 개념이다. 늘 내곁에 존재하는 미래라는 개념은 결국 일상이고, 그 일상같은 미래를 "인공지능이 우리의 일자리를 다 빼앗아 갈거야, 미세먼지가 우리의 건강을 다 뺏어가고 말거야"라는 식으로 부정적으로만 생각한다면, 현재를 행복하게 살 수 없다. **지금 당장 우리 개인이 어떻게 해결할 할 방법이 없는 미세먼지 같은 경우, 그냥 마스크를 꾹 눌러 착용하고 내게 남은 행복들을 생각하자.** 어쩔 수 없는 일을 가지고 부정인 생각으로 머릿속을 채울 필요가 뭐가 있나.
 
  "일취월장", "뼈있는 아무말 대잔치", "완벽한 공부법"의 저자이신 신영준 박사님께서는 얼마전 [이런 글](https://www.facebook.com/dr.yj.shin)을 썻다.
 ![미세행복](/public/img/blabla/habbit1.png)
