오탈자 수정

--- a/_posts/2019-04-05-드로이드나이츠2019후기.md
+++ b/_posts/2019-04-05-드로이드나이츠2019후기.md
@@ -7,7 +7,7 @@ comments: true
 ---
 
 ## 2019 드로이드나이츠
-2019년, 국내에서 안드로이드 행사중 가장 크다고 할 수 있는 [드로이드나이츠](https://droidknights.github.io/2019/)에 참석했다. 드로이드 나이츠 공식 홈페이지에 소개된 문구는 이렇다.
+2019년, 국내에서 안드로이드 행사 중 가장 크다고 할 수 있는 [드로이드나이츠](https://droidknights.github.io/2019/)에 참석했다. 드로이드 나이츠 공식 홈페이지에 소개된 문구는 이렇다.
 ![droidnight2019_1](/public/img/blabla/droidnight2019.png)
 
 행사 세션은 아래와 같다.
@@ -24,7 +24,7 @@ comments: true
 
 이건 여담이지만, 어떤 세션이 끝나고 화장실에서 참석자 두 사람이 하는 이야기를 들었다. 아키텍쳐에 대한 이야기였는데 해당 세션에 만족하지 못했던 분들이었나보다. "자기 생각에는 그것 보단 내 생각 더 나은 것 같은데.. 그리고 설명한 아키텍쳐에 대한 장점을 잘 모르겠더라, 장점을 설명하는 방법이 조금 잘못 된것 같다. 유명한 분이라 기대를 많이했는데 정말 실력있는 분 맞나?" 등등 조금 비꼬듯이 이야기를 주고 받고 있었다. 
 
-해당 주제에 대해 자신의 의견을 덧붙여 해답을 찾기위한 논쟁은 정말 좋다. 그러나 모든 사람을 만족시키는 아키텍쳐란 애초에 존재하기 어렵다는 점(존재 한다면 당연히 지금쯤 아키텍쳐에 대한 논쟁은 없었을 것이다), 그리고 수 백명의 사람들 모두에게 딱 맞게 설명하기란 더 어렵다는 점은 항상 기억해두면 좋겠다. 적어도 그 분들은 자신이 했던 깊은 고민 끝에 좋다고 생각했던 부분을 공유하려 하는 분들이다. 내용이 올바르지 못했을 수 도 있지만, 도리어 자신의 생각은 다른 누군가가 들었을 때 올바른 생각인지 객관적으로 돌아보고, 또 발표자 자체에 대해 논할 것이라면 스스로는 수 백명 앞에 당당히 내가 생각해낸 아이디어를 발표할 수 있을지를 생각해보고 논하자. 다시 말하지만 이건 여담이다! 
+해당 주제에 대해 자신의 의견을 덧붙여 해답을 찾기위한 논쟁은 정말 좋다. 그러나 모든 사람을 만족시키는 아키텍쳐란 애초에 존재하기 어렵다는 점(존재 한다면 당연히 지금쯤 아키텍쳐에 대한 논쟁은 없었을 것이다), 그리고 수 백명의 사람들 모두에게 딱 맞게 설명하기란 더 어렵다는 점은 항상 기억해두면 좋겠다. 적어도 그 분들은 자신이 했던 깊은 고민 끝에 좋다고 생각했던 부분을 공유하려 하는 분들이다. 내용이 올바르지 못했을 수 도 있지만, 도리어 자신의 생각은 다른 누군가가 들었을 때 올바른 생각이라고 받아 들여질지 객관적으로 돌아보고, 또 발표자 자체에 대해 논할 것이라면 스스로는 수 백명 앞에 당당히 자신의 아이디어를 발표할 수 있을지를 생각해보고 논하자. 다시 말하지만 이건 여담이다! 
 
 
 
