review 카테고리 삭제

--- a/_posts/2018-07-22-amathon.md
+++ b/_posts/2018-07-22-amathon.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 해커톤(amathon) 후기
-category: review
+category: 중얼 중얼
 tags: [amathon, hackathon, aws, AWSKRUG]
 comments: true
 ---
