--- a/_posts/2019-03-01-훌륭한개발자.md
+++ b/_posts/2019-03-01-훌륭한개발자.md
@@ -15,7 +15,7 @@ comments: true
 
 그렇다면 개발을 딱 일거리 정도로만 생각하는 사람은 앞서 말한 훌륭한 개발자가 될 수 없을까? 코딩을 미친듯이 사랑하지는 않는, 또는 취미로 개발을 하거나 취미로 기술 공부를 하지 않는 일반 사람들은 훌륭한 개발자가 될 수 없을까? 훌륭한 개발자라는 정의를 코드를 잘 짜고 기술 습득력이 좋은 사람이라고만 정의한다면 사실은 힘들 것이라고 생각한다. **그러나 훌륭한 개발자의 기준을 누가 꼭 "실력"으로 정의했는가?** 꼭 그렇게 코딩 마스터스럽게 살지 않더라도 함께 일하고 싶은 사람, 코딩실력이 뛰어나진 않더라도 팀을 잘 이끌어 나가는 사람들도 정말 훌륭한 개발자라고 생각한다. 그리고 그런 능력은 어떻게 보면 기술을 익히고 코드를 잘 짜는 것 보다도 더 값진 능력 일 수도 있으며 팀 단위 생활에서는 꼭 필요한 사람들이다. 
 
-무엇보다 중요한 것은, **개발자 인생을 살면서 스스로 행복한 삶을 살고 있다면 누구보다 훌륭한 개발자라고 생각한다.** 실력이 출중해서 기술 트렌드를 주도하거나 책을 쓰지 않더라도, 즉 "저 사람은 저렇게 훌륭해서 돈도 잘 벌고 이름도 널리 알리는데 나는 왜 이러지?" 라는 생각에서 벗어나, 다른 사람이 쓴 책을 읽으며 학습을 하고 코드를 짜는게 즐겁다면 훌륭한 개발자라고 생각한다. **꼭 강박을 가질 필요가 없다는 말이다. 꼭 메시, 호날두가 되지 않더라도 팀에 없어서는 안될 훌륭한 선수들이 존재하며, 그들보다 축구를 더 즐기는 선수들이 있을 수도 있다(물론 ).**
+무엇보다 중요한 것은, **개발자 인생을 살면서 스스로 행복한 삶을 살고 있다면 누구보다 훌륭한 개발자라고 생각한다.** 실력이 출중해서 기술 트렌드를 주도하거나 책을 쓰지 않더라도, 즉 "저 사람은 저렇게 훌륭해서 돈도 잘 벌고 이름도 널리 알리는데 나는 왜 이러지?" 라는 생각에서 벗어나, 다른 사람이 쓴 책을 읽으며 학습을 하고 코드를 짜는게 즐겁다면 훌륭한 개발자라고 생각한다. **꼭 강박을 가질 필요가 없다는 말이다. 꼭 메시, 호날두가 되지 않더라도 팀에 없어서는 안될 훌륭한 선수들이 존재하며, 그들보다 축구를 더 즐기는 선수들이 있을 수도 있다.**
 
 ## 스스로는 어떠한가?
 개인적으로는 코딩이 즐겁고, 학습하는 것도 즐겁다. 가장 처음 혼자 c언어를 공부했을 때 나는 정말이지 너무 행복했다. 이후 여러가지 언어를 배우고 프레임워크를 배우고, 작은 서비스들을 만들면서 내 천직은 개발이구나 라고 생각했었다. 그런데 되돌아보면 항상 나는 누군가가 쓴 글을 보고 배우고 강의를 보고 배웠으며 심지어는 나와 동갑임에도 불구하고 이름을 널리 날린 사람들이 꽤 많다는 것을 알게되어 부러워한 적도 많다. 나에게 프로그래밍이 고통이었던 적은 없었으며 스스로 재미를 느끼며 학습을 하고 있음에도 불구하고 항상 나보다 뛰어난 분들이 존재했다.
