--- a/_posts/2019-04-05-드로이드나이츠2019후기.md
+++ b/_posts/2019-04-05-드로이드나이츠2019후기.md
@@ -24,14 +24,14 @@ comments: true
 
 이건 여담이지만, 어떤 세션이 끝나고 화장실에서 참석자 두 사람이 하는 이야기를 들었다. 아키텍쳐에 대한 이야기였는데 해당 세션에 만족하지 못했던 분들이었나보다. "자기 생각에는 그것 보단 내 생각 더 나은 것 같은데.. 그리고 설명한 아키텍쳐에 대한 장점을 잘 모르겠더라, 장점을 설명하는 방법이 조금 잘못 된것 같다. 유명한 분이라 기대를 많이했는데 정말 실력있는 분 맞나?" 등등 조금 비꼬듯이 이야기를 주고 받고 있었다. 
 
-해당 주제에 대해 자신의 의견을 덧붙여 해답을 찾기위한 논쟁은 정말 좋다. 그러나 모든 사람을 만족시키는 아키텍쳐란 애초에 존재하기 어렵다는 점(존재 한다면 당연히 지금쯤 아키텍쳐에 대한 논쟁은 없었을 것이다), 그리고 수 백명의 사람들 모두에게 딱 맞게 설명하기란 더 어렵다는 점은 항상 기억해두면 좋겠다. 적어도 그 분들은 자신이 했던 깊은 고민 끝에 좋다고 생각했던 부분을 공유하려 하는 분들이다. 내용이 올바르지 못했을 수 도 있지만, 도리어 자신의 생각은 다른 누군가가 들었을 때 올바른 생각이라고 받아 들여질지 객관적으로 돌아보고, 또 발표자 자체에 대해 논할 것이라면 스스로는 수 백명 앞에 당당히 자신의 아이디어를 발표할 수 있을지를 생각해보고 논하자. 다시 말하지만 이건 여담이다! 
+해당 주제에 대해 자신의 의견을 덧붙여 해답을 찾기위한 논쟁은 정말 좋다. 그러나 모든 사람을 만족시키는 아키텍쳐란 애초에 존재하기 어렵다는 점(존재 한다면 당연히 지금쯤 아키텍쳐에 대한 논쟁은 없었을 것이다), 그리고 수 백명의 사람들 모두에게 딱 맞게 설명하기란 더 어렵다는 점을 기억해두면 좋겠다. 적어도 그 분들은 자신이 했던 깊은 고민 끝에 좋다고 생각했던 부분을 공유하려 하는 분들이다. 내용이 올바르지 못했을 수도 있지만, 도리어 자신의 생각은 다른 누군가가 들었을 때 올바른 생각이라고 받아 들여질지 객관적으로 돌아보고, 또 발표자 자체에 대해 논할 것이라면 스스로는 수 백명 앞에 당당히 자신의 아이디어를 발표할 수 있을지를 생각해보고 논하자. 다시 말하지만 이건 여담이다.
 
 
 
 ## 대부분 비슷하구나
-모든 세션을 완벽히 이해하진 못했지만, 안드로이드 진영에서 나름 실력있다고 하시는 분들의 발표를 듣다보면 공통점들을 발견할 수 있었다. **아키텍처에대한 고민과 현재 사용하고 있는 트렌디한 라이브러리들의 사용법이다.** 아키텍쳐에 대한 고민은 어떤 프로그래밍을 하던지 따라다니는 고민인 것 같다. 이제 겨우 mvvm을 조금씩 이해해 나가고 있는 단계라서 안드로이드 아키텍쳐 전반을 다루는 세션은 이해하기 어려운 부분이 많았지만, 오히려 React를 다루면서 했던 고민들이 떠올라 세션 이해에 도움이 되었던 부분도 있었다. 
+모든 세션을 완벽히 이해하진 못했지만, 안드로이드 진영에서 나름 실력있다고 하시는 분들의 발표를 듣다보면 공통점들을 발견할 수 있었다. **아키텍처에대한 고민, 그리고 트렌디한 라이브러리들의 올바른 사용법에 대한 고민을 자주 하고 있다는 것이다.** 아키텍쳐에 대한 고민은 어떤 프로그래밍을 하던지 따라다니는 고민인 것 같다. 이제 겨우 mvvm을 조금씩 이해해 나가고 있는 단계라서 안드로이드 아키텍쳐 전반을 다루는 세션은 이해하기 어려운 부분이 많았지만, 오히려 React를 다루면서 했던 고민들이 떠올라 세션 이해에 도움이 되었던 부분도 있었다. 
 
-대다수 고민들이 아키텍쳐에서 오기 때문에 아키텍쳐에 관한 세션이 두 개나 있었다. 따지고 보면 내부적으로 아키텍처를 다루는 세션들도 많았기에 두 개가 넘었다고 볼 수 있다. 모두 아키텍처 고민이라는 공통점이 있지만 다들 조금씩 다른 방법의 해법을 가지고 있었다. 강사의 취향에 따라, 가치관에 따라 조금씩 다른 그 아키텍처들을 모두 이해하진 못했지만, **한 가지 얻은 사실은 아키텍처에는 정답은 없고 해답만이 존재한다는 것.**
+대다수 고민들이 아키텍쳐에서 오기 때문에 아키텍쳐에 관한 세션이 두 개나 있었다. 따지고 보면 내부적으로 아키텍처를 다루는 세션들도 많았기에 두 개가 넘었다고 볼 수 있다. 모두 아키텍처 고민이라는 공통점이 있지만 다들 조금씩 다른 방법의 해법을 가지고 있었다. 강사의 취향에 따라, 가치관에 따라 조금씩 다른 그 아키텍처들을 제대로 이해하진 못했지만, **한 가지 얻은 사실, 아키텍처에는 정답은 없고 해답만이 존재한다는 것.**
 
 한편 모든 강사분들이 예시로 든 코드에는 RxJava가 포함되어 있었다. 더불어 대부분 mvvm 패턴을 사용중이고, 여기저기서 이름만 많이 들어본 의존성 주입 라이브러리와 RxBinding, 또 개인적으로 정복하고 싶은 coroutine도 상당히 많이 언급되었다. 이런 것들을 조금씩 스멀스멀 공부하고 있었는데 실제 현업에 계시는 훌륭한 개발자들이 모두 사용하고 있음을 확신하게 되어 조금은 안심이 되었다. 물론 다른 사람들이 많이 쓴다고 해서 무조건 따라야하는 것은 아니지만 아직 신입 2개월 차인 내가 할 수 있는 최선은 이런 것 아니겠나... ~~애기들이 엄마 아빠 말을 똑같이 따라하면서 말을 배우는 것 처럼....?~~
 
