오탈자 수정

--- a/_posts/2019-03-31-습관.md
+++ b/_posts/2019-03-31-습관.md
@@ -16,9 +16,9 @@ comments: true
 
 그러나 이내 생각이 바뀌었다. 내 기억속에 오래 머무르고 있는 과거의 행복한 추억들을 떠올린다 하더라도 그 시절 그 감정, 감동을 다시 100% 느낄 순 없다. 추억거리가 전혀 없는 건 좋지 않지만, 때로는 그 시절로 돌아갈 수 없음에 아쉬움이 남기도 한다. 물론 이동진 작가는 이구아수 폭포를 보러가는것이 불행이라고 말한 적은 없다. 큰 행복이지만 긴 행복은 아니라는 것이다. 
 
-습관의 힘이란 책을 보면, 인간의 행복감에 관한 심리학의 연구 결과는 공통적으로 **'행복은 기쁨의 강도가 아니라 빈도'**라고 말한다. 어떤 '큰 것 한 방'도 오래가지 않는다는 것이다.
+습관의 힘이란 책을 보면, 인간의 행복감에 관한 심리학의 연구 결과들이 공통적으로 내놓는 말들이 있다. **'행복은 기쁨의 강도가 아니라 빈도'** 라는 것. 어떤 '큰 것 한 방'도 오래가지 않는다는 것이다.
 
-1월 추운 한겨울에 뚱뚱한 여성이, 7월 무더운 한 여름에 날씬한 몸매로 비키니를 입고 바닷가를 놀러가기 위해 7개월 동안 혹독한 다이어트를 하며 맛있는 음식을 참고있다고 해보자. 그 7개월을 묵묵히 참으며 여름을 위해 그 고통을 감내할 수 있는 사람은 그렇게 하면된다. 그러나 그게 정말 힘들고 지겹고, 고통스러운 사람은 그 시간에 맛집 탐방 동호회에 가입해 꾸준히 행복을 유지하는 편이 오히려 더 유리하다. 
+1월 추운 한겨울에 뚱뚱한 여성이, 7월 무더운 한 여름에 날씬한 몸매로 비키니를 입고 바닷가를 놀러가기 위해 7개월 동안 혹독한 다이어트를 하며 맛있는 음식을 참고있다고 해보자. 그 7개월을 묵묵히 참으며 여름을 위해 그 고통을 감내할 수 있는 사람은 그렇게 하면된다. 그러나 그게 정말이지 힘들고 지겹고, 고통스러운 사람은 그 시간에 맛집 탐방 동호회에 가입해 꾸준히 행복을 유지하는 편이 오히려 더 유리하다. 
 
 잘나가는 사람 사람과 친해져보려 애쓰기보다 가족, 그리고 오래된 친구와의 관계를 돌아보는 것이 낫다. **습관처럼 내 곁에 있는 이들과의 관계가 불행하면 내 삶 또한 불행할 것이기 때문이다.**
 
