오탈자 수정

--- a/_posts/2018-08-24-형식 마추기.md
+++ b/_posts/2018-08-24-형식 마추기.md
@@ -3,17 +3,16 @@ layout: post
 title: 클린코드_형식 마추기
 category: Clean Code
 tags: [book]
-comments: true 
---- 
-코드형식은 중요하다! 너무 종요해서 무시하기 어렵다. 너무나도 중요하므로 융통성 없이 맹목적으로 따르면 안 된다. 오늘 구현한 코드의 가독성은 앞으로 바뀔 코드의 품질에 지대한 영향을 미친다.
+comments: true
+---
 
-
+코드형식은 중요하다! 너무 중요해서 무시하기 어렵다. 너무나도 중요하므로 융통성 없이 맹목적으로 따르면 안 된다. 오늘 구현한 코드의 가독성은 앞으로 바뀔 코드의 품질에 지대한 영향을 미친다.
 
 ## 적절한 행 길이를 유지하라
 
 500줄을 넘지 않고 대부분 200줄 정도인 파일로도 커다란 시스템을 구축할 수 있다. 반드시 지킬 엄격한 규칙은 아니지만 바람직한 규칙으로 삼으면 좋겠다. 일반적으로 큰 파일보다 작은 파일이 이해하기 쉽다.
 
-### 신문 기서처럼 작성하라
+### 신문 기사처럼 작성하라
 
 이름은 간단하면서도 설명이 가능하게 짓는다. 이름만 보고도 올바른 모듈을 살펴보고 있는지 아닌지를 판단할 정도로 신경 써서 짓는다. 소스 파일 첫 부분은 고차원 개념과 알고리즘을 설명한다. 아래로 내려갈수록 의도를 세세하게 묘사한다. 마지막에는 가장 저차원 함수와 세부 내역이 나온다.
 
@@ -37,8 +36,6 @@ comments: true
 
 한 함수가 다른 함수를 호출한다면 두 함수는 세로로 가까이 배치한다. 또한 가능하다면 호출하는 함수를 호출되는 함수보다 먼저 배치한다. 독자는 방금 호출한 함수가 잠시 후에 정의되리라는 사실을 예측한다.
 
-
-
 ## 가로 형식 마추기
 
 저자는 좋은 코드 규칙을 위해 프로젝트 7개를 조사했다. 결과가 놀랍도록 규칙적이다. 20 자에서 60자 사이인 행이 총 행 수의 40%에 달한다. 10자 미만은 30% 정도로 보인다. 80자 이후부터 행 수는 급격하게 감소한다. 프로그래머는 명백하게 짧은 행을 선호한다.
@@ -47,7 +44,7 @@ comments: true
 
 ### 가로 공백과 밀집도
 
-가로로는 공백을 사용해 밀접한 개념과 느슨한 개념을 포현한다. 공백('  ')을 넣으면 한 개념이 아니라 별개로 보인다. 예를 들어 함수를 호출하는 코드에서 괄호 안 인수는 공백으로 분리하고 쉼표를 강조해 인수가 별개라는 사실을 보여준다. 반면 함수 이름과 이어지는 괄호 사이에는 공백을 넣지 않는다.
+가로로는 공백을 사용해 밀접한 개념과 느슨한 개념을 포현한다. 공백(' ')을 넣으면 한 개념이 아니라 별개로 보인다. 예를 들어 함수를 호출하는 코드에서 괄호 안 인수는 공백으로 분리하고 쉼표를 강조해 인수가 별개라는 사실을 보여준다. 반면 함수 이름과 이어지는 괄호 사이에는 공백을 넣지 않는다.
 
 ```java
 private void measureLine(String line) {
@@ -58,4 +55,3 @@ private void measureLine(String line) {
     recordWidestLine(lineSize);
 }
 ```
-
