--- a/_posts/kotlin/2019-05-24-property.md
+++ b/_posts/kotlin/2019-05-24-property.md
@@ -64,6 +64,67 @@ class Person {
 
 `val`로 선언한 name의 경우 setter가 없다. setter를 만들고 싶어도 val은 불변이기에 만들 수 없다(억지로 만드려고 하면 컴파일에러가 뜬다). 참고로 위에서 `get()`과 `set()`을 정해준 것은 커스텀 접근자이다. 기본적으로는 코틀린 클래스를 만들 때 생성자에 넣어준 데이터들에 대하여 get()과 set()이 숨겨져 있으나, 위의 코드처럼 명시적으로 적어줄 수 있다. 그말은 getter와 setter를 커스텀 할 수도 있다는 뜻이다. 추가적으로 위 코드는 클래스의 생성자가 아닌 필드에서 데이터를 선언했으므로 데이터 가시성은 public이다.
 
+### 생성자에 val, var의 유무 차이
+
+```kotlin
+class Person(val name: String) // 1
+
+class Person(name: String) //2
+```
+
+이 둘의 차이는 무엇일까? 먼저 생성자에 val(또는 var)이 있는 경우 멤버변수로 변환된다. 즉 `class Person(val name: String)`의 경우 아래 자바 코드로 변환된다.
+
+```java
+public final class Person {
+   @NotNull
+   private final String name;
+
+   @NotNull
+   public final String getName() {
+      return this.name;
+   }
+
+   public Person(@NotNull String name) {
+      Intrinsics.checkParameterIsNotNull(name, "name");
+      super();
+      this.name = name;
+   }
+}
+```
+
+반면 `class Person(name: String)`의 경우 아래의 자바 코드와 같다.
+
+```java
+public final class Person {
+   public Person(@NotNull String name) {
+      Intrinsics.checkParameterIsNotNull(name, "name");
+      super();
+   }
+}
+```
+
+코틀린 클래스 생성자에 `val`이나 `var`이 없는 경우는 딱 생성자에서만 사용 가능하다. 클래스의 멤버변수는 되지 못하기 때문에 클래스의 다른 메서드에서는 사용할 수 없다. 셍성자에 `val`나 `var`가 없는 데이터의 경우 `init {...}`같은 생성자에서 사용할 수 있다.
+
+```kotlin
+class Person(name: String) {
+    init {
+        println(name)
+    }
+}
+```
+
+위 코드는 아래의 자바 코드로 변환된다.
+
+```java
+public final class Person {
+   public Person(@NotNull String name) {
+      Intrinsics.checkParameterIsNotNull(name, "name");
+      super();
+      System.out.println(name);
+   }
+}
+```
+
 ## 핵심
 
 코틀린 생성자로 넘겨준 데이터는 기본적으로 private이고, 자동으로 getter와 setter(setter의 경우 var에 한해서)가 만들어 지기 때문에 일반적인 자바빈과 동일하다.
