버튼중복클릭방지 카테고리 설정

--- a/_posts/android/2019-05-25-버튼중복클릭방지.md
+++ b/_posts/android/2019-05-25-버튼중복클릭방지.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: RxBinding을 사용하여 안드로이드 버튼 중복 클릭 방지하기
+category: Android
 tags: [RxBinding, RxJava, Android]
 comments: true
 ---
