--- a/_posts/android/2019-05-25-버튼중복클릭방지.md
+++ b/_posts/android/2019-05-25-버튼중복클릭방지.md
@@ -32,7 +32,7 @@ comments: true
 
 "송금" 버튼을 클릭한 이후 서버로 부터 응답을 받아오는 시간이 너무 오래걸린다(3초)고 가정해보자. "송금"버튼을 누르고 서버로부터 응답을 받고 나면 화면이 전환되어야 하는데 사용자에게 3초라는 시간은 너무 긴 시간이다. "버튼눌렀는데 왜 안넘어가지? 버튼이 안눌렸나? 다시눌러야지" 라며 2초 후에 또 버튼을 누를 것이다.
 
-위의 경우 **`debounce()`에 시간을 3초로 걸어놓았을 경우를 생각해 보자.** 사용자가 성격이 너무 급해서 2초 마다 버튼을 클릭하며 "아 왜이렇게 느린거야!?"라고 소리칠 수도 있다. 이 사용자가 2초 마다 버튼을 계속 클릭한다면 절대 다음 화면으로 넘어갈 수 없다. 언젠가는 이 사용자가 버튼 클릭 이후 3초를 기다리길 바랄 수 밖에 없다.
+위의 상황에서 **`debounce()`에 시간을 3초로 걸어놓았을 경우를 생각해 보자.** 사용자가 성격이 너무 급해서 2초 마다 버튼을 클릭하며 "아 왜이렇게 느린거야!?"라고 소리칠 수도 있다. 이 사용자가 2초 마다 버튼을 계속 클릭한다면 절대 다음 화면으로 넘어갈 수 없다. 언젠가는 이 사용자가 버튼 클릭 이후 3초를 기다리길 바랄 수 밖에 없다.
 
 이번엔 **`throttle()`에 시간을 3초로 걸어놓았을 경우를 생각해보자.** 성격 급한 사용자가 처음 버튼 클릭 후 2초뒤에 또 버튼을 클릭해도 그 이벤트는 무시된다. 즉 맨 처음 누른 그 시점에만 곧 바로 이벤트가 적용되어 서버로 요청이 날라갔고, 2초 뒤에 누른 이벤트는 무시된다. 대부분 경우 버튼 중복 터치 이벤트 방지는 `throttle()`이 좋은 선택이 될 수가 있지만, 서버로 부터의 응답이 조금 늦어져서 3.2초가 걸릴 경우 3.1초에 클릭한 중복 터치 이벤트는 무시하지 못해서 송금이 될 것이다. 따라서 버튼 클릭 이후 해당 버튼이 없어지거나 화면이 바뀐다면 `throttle()`의 시간을 넉넉히 잡아주는 것이 좋아보인다.
 
