코틀린 프로퍼티 수정

--- a/_posts/kotlin/2019-05-24-property.md
+++ b/_posts/kotlin/2019-05-24-property.md
@@ -13,9 +13,8 @@ public class Person {
     private final String name;
     private boolean isMarried;
 
-    public Person(String name, int age, boolean isMarried) {
+    public Person(String name, boolean isMarried) {
         this.name = name;
-        this.age = age;
         this.isMarried = isMarried;
     }
 
@@ -125,6 +124,58 @@ public final class Person {
 }
 ```
 
-## 핵심
+### 주의할 점
 
-코틀린 생성자로 넘겨준 데이터는 기본적으로 private이고, 자동으로 getter와 setter(setter의 경우 var에 한해서)가 만들어지기 때문에 일반적인 자바빈과 동일하다.
+디컴파일한 자바 코드에서 필드가 private이라고 하여 코틀린의 프로퍼티도 private은 아니다. 이게 무슨말인가 싶겠지만, 필드와 프로퍼티를 다르게 인식할 줄 알아야 한다. 자바는 기본적으로 필드로 다루고, 코틀린은 프로퍼티(필드 + 접근자)를 기본으로 다루는 언어다.
+
+```kotlin
+class Person(var name: String)
+```
+
+위의 코드는 아래의 자바코드가 된다.
+
+```java
+public class Person {
+    private String name;
+
+    public Person(String name) {
+        this.name = name;
+    }
+
+    public Void setName(String value) {
+        this.name = value;
+    }
+
+    public String getName() {
+        return this.name;
+    }
+
+}
+```
+
+필드인 `name`자체만 보면 private 키워드가 붙어있으므로 private이 맞지만, 프로퍼티 전체를 보면 다르다. 필드는 private이지만 getter와 setter로 접근이 모두 가능하기 때문에 프로퍼티는 private하다고 볼 수 없다. 위의 코드에서 **`name` 프로퍼티**가 private이기 위해서는 아래와 같은 코틀린 코드가 필요하다.
+
+```kotlin
+class Person(private var name: String)
+```
+
+생성자 앞에 `private`이 붙었다. `private`이 붙지 않은 상태였어도 디컴파일한 자바 코드의 필드에는 `private`이 붙지만, 코틀린은 기본적으로 필드가 아닌 프로퍼티를 다루기 때문에 프로퍼티 전체가 `private`이 된다. 디컴파일된 자바 코드는 아래와 같다.
+
+```java
+public final class Property {
+   private String name;
+
+   public Property(@NotNull String name) {
+      Intrinsics.checkParameterIsNotNull(name, "name");
+      super();
+      this.name = name;
+   }
+}
+```
+
+getter와 setter가 없어서 프로퍼티가 private이라고 볼 수 있다.
+
+### 핵심
+
+- 자바는 필드를 기본으로, 코틀린은 프로퍼티를 기본으로 다룬다.
+- 디컴파일된 자바 코드의 필드가 private이라고해서 kotlin 프로퍼티가 private인 것은 아니다.
