--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -33,3 +33,8 @@ ContextCompat.getColor(context, R.color.colorBlabla)
 리사이클러뷰의 크기를 줄이지 않고, 랜더링되기 전에 시작과 끝에 패딩값을 넣어 줄 수 있다.
 
 - [android:clipToPadding 속성](https://stack07142.tistory.com/312)
+
+### Drwable Layout
+
+`android:fitsSystemWindows = true`
+옆에서 슬며시 나오는 뷰가 status bar와 키보드 영역을 덮지 않음을 설정하는 부분. true라면 status바를 덮지 않는다.
