오탈자 수정

--- a/_posts/kotlin/2019-05-24-property.md
+++ b/_posts/kotlin/2019-05-24-property.md
@@ -102,7 +102,7 @@ public final class Person {
 }
 ```
 
-코틀린 클래스 생성자에 `val`이나 `var`이 없는 경우는 딱 생성자에서만 사용 가능하다. 클래스의 멤버변수는 되지 못하기 때문에 클래스의 다른 메서드에서는 사용할 수 없다. 셍성자에 `val`나 `var`가 없는 데이터의 경우 `init {...}`같은 생성자에서 사용할 수 있다.
+코틀린 클래스 생성자에 `val`이나 `var`이 없는 경우는 딱 생성자에서만 사용 가능하다. 클래스의 멤버변수는 되지 못하기 때문에 클래스의 다른 메서드에서는 사용할 수 없다. 생성자에 `val`나 `var`가 없는 데이터의 경우 `init {...}`같은 생성자에서 사용할 수 있다.
 
 ```kotlin
 class Person(name: String) {
