--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -6,7 +6,7 @@ tags: [tip]
 comments: true
 ---
 
-### Drawable 가져오기
+## Drawable 가져오기
 
 > getString을 제외하고는 Context 에서 [ContextCompat](https://developer.android.com/reference/android/support/v4/content/ContextCompat)으로 바뀌었다.
 
@@ -14,36 +14,68 @@ comments: true
 ContextCompat.getDrawable(context, R.drawable.blabla)
 ```
 
-### Color 가져오기
+## Color 가져오기
 
 ```kotlin
 ContextCompat.getColor(context, R.color.colorBlabla)
 ```
 
-### 하나의 문자열 마음대로 꾸미기
+## 하나의 문자열 마음대로 꾸미기
 
 [SpannableString](https://developer.android.com/reference/android/text/SpannableString) 문자열 하나를 두고서 앞, 중간, 뒤에 이미지를 넣거나 특정 서브 스트링에 스타일링을 할 수 있다.
 
 - [[Android] 글자에 옷을 입혀보자 (Spannable 사용하기) - 여름숲](https://re-build.tistory.com/13)
 - [Android spannable (textview) - 김형섭의 개발공간](https://sub-dev.tistory.com/10)
 
-### recycler view에서 패딩값 설정
+## recycler view
+
+##### 패딩값 설정
 
 `android:clipToPadding`
-리사이클러뷰의 크기를 줄이지 않고, 랜더링되기 전에 시작과 끝에 패딩값을 넣어 줄 수 있다.
 
 - [android:clipToPadding 속성](https://stack07142.tistory.com/312)
+  리사이클러뷰의 크기를 줄이지 않고, 랜더링되기 전에 시작과 끝에 패딩값을 넣어 줄 수 있다.
 
-### Drwable Layout
+##### layoutManager xml에서 관리
+
+```
+app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+```
+
+##### tools:listitem
+
+```
+tools:listitem="@layout/list_item_garden_planting"
+```
+
+`listview`나 `recycler`뷰에서 `tools:listitem` 속성이 실제 프로덕션에서 영향을 미치진 않는다. 다만 해당 리사이클러뷰의 각 item list의 뷰(레이아웃)을 바로 찾아갈 수 있고, 개발도중 일종의 미리보기처럼 볼 수 있다.
+
+## Drwable Layout
 
 `android:fitsSystemWindows = true`
 옆에서 슬며시 나오는 뷰가 status bar와 키보드 영역을 덮지 않음을 설정하는 부분. true라면 status바를 덮지 않는다.
 
-### Databinding finish Activity
+## Databinding finish Activity
 
 ```xml
 ...
 <import type="android.app.Activity"/>
 ...
-android:onClick="@{(view) -> ((Activity)(view.getContext())).finish()}"
+<ImagaeView
+    android:onClick="@{(view) -> ((Activity)(view.getContext())).finish()}" />
+...
 ```
+
+## tools
+
+##### tools:layout
+
+```
+<fragment
+    ...
+    tools:layout="@layout/fragment_view"
+    ...
+>
+```
+
+디자인 탭에서 액티비티 xml 내에 fragment는 보통 회색으로 보여진다. 그러나 `tools:layout`을 사용하면 Fragment의 내용도 함께 보여진다.
